行政訴訟法 1998.10.2

--- a/司法-行政訴訟/行政訴訟法.md
+++ b/司法-行政訴訟/行政訴訟法.md
@@ -1,68 +1,616 @@
-* 1 人民因中央或地方機關之違法行政處分，認為損害其權利，經依訴願法提起再訴願而不服其決定，或提起再訴願逾三個月不為決定，或延長再訴願決定期間逾二個月不為決定者，得向行政法院提起行政訴訟。逾越權限或濫用權力之行政處分，以違法論。已向中央各院提起之訴願，以再訴願論。
+* 1 行政訴訟以保障人民權益，確保國家行政權之合法行使，增進司法功能為宗旨。
 
-* 2 提起行政訴訟，在訴訟程序終結前，得附帶請求損害賠償。前項損害賠償，除適用行政訴訟之程序外，準用民法之規定。但民法第二百十六條規定之所失利益，不在此限。
+* 2 公法上之爭議，除法律別有規定外，得依本法提起行政訴訟。
 
-* 3 對於行政法院之裁判，不得上訴或抗告。
+* 3 前條所稱之行政訴訟，指撤銷訴訟、確認訴訟及給付訴訟。
 
-* 4 行政法院之判決，就其事件有拘束各關係機關之效力。
+* 4 人民因中央或地方機關之違法行政處分，認為損害其權利或法律上之利益，經依訴願法提起訴願而不服其決定，或提起訴願逾三個月不為決定，或延長訴願決定期間逾二個月不為決定者，得向高等行政法院提起撤銷訴訟。逾越權限或濫用權力之行政處分，以違法論。訴願人以外之利害關係人，認為第一項訴願決定，損害其權利或法律上之利益者，得向高等行政法院提起撤銷訴訟。
 
-* 5 行政法院關於受理訴訟之權限，以職權裁定之。
+* 5 人民因中央或地方機關對其依法申請之案件，於法令所定期間內應作為而不作為，認為其權利或法律上利益受損害者，經依訴願程序後，得向高等行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。人民因中央或地方機關對其依法申請之案件，予以駁回，認為其權利或法律上利益受違法損害者，經依訴願程序後，得向高等行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。
 
-* 6 評事有左列情形之一者，應自行迴避，不得執行職務：一、有民事訴訟法第三十二條第一款至第六款情形之一者。二、曾在中央或地方機關參與該訴訟事件之處分或決定者。三、曾在普通法院參與該訴訟事件之審判者。四、曾參與該訴訟事件再審前之裁判者。但其迴避以一次為限。
+* 6 確認行政處分無效及確認公法上法律關係成立或不成立之訴訟，非原告有即受確認判決之法律上利益者，不得提起之。其確認已執行完畢或因其他事由而消滅之行政處分為違法之訴訟，亦同。確認行政處分無效之訴訟，須已向原處分機關請求確認其無效未被允許，或經請求後於三十日內不為確答者，始得提起之。確認公法上法律關係成立或不成立之訴訟，於原告得提起撤銷訴訟者，不得提起之。確認訴訟以高等行政法院為第一審管轄法院。應提起撤銷訴訟，誤為提起確認行政處分無效之訴訟，其未經訴願程序者，高等行政法院應以裁定將該事件移送於訴願管轄機關，並以行政法院收受訴狀之時，視為提起訴願。
 
-* 7 行政訴訟之當事人，謂原告、被告及參加人。當事人得委任代理人代理訴訟，代理人應提出委任書，證明其代理權。
+* 7 提起行政訴訟，得於同一程序中，合併請求損害賠償或其他財產上給付。
 
-* 8 行政法院得命有利害關係之第三人參加訴訟；並得因第三人之請求，允許其參加。
+* 8 人民與中央或地方機關間，因公法上原因發生財產上之給付或請求作成行政處分以外之其他非財產上之給付，得提起給付訴訟。因公法上契約發生之給付，亦同。前項給付訴訟之裁判，以行政處分應否撤銷為據者，應於依第四條第一項或第三項提起撤銷訴訟時，併為請求。原告未為請求者，審判長應告以得為請求。除別有規定外，給付訴訟以高等行政法院為第一審管轄法院。
 
-* 9 行政訴訟之被告，謂左列機關：一、駁回訴願時之原處分機關。二、撤銷或變更原處分或決定時，為最後撤銷或變更之機關。
+* 9 人民為維護公益，就無關自己權利及法律上利益之事項，對於行政機關之違法行為，得提起行政訴訟。但以法律有特別規定者為限。
 
-* 10 行政訴訟之提起，應於再訴願決定書送達之次日起二個月內為之。但因天災或其他不應歸責於己之事由，致遲誤起訴期間者，於其原因消滅後一個月內，得向行政法院聲請許可其起訴。前項聲請，應以書狀為之，並釋明遲誤期間之原因及其消滅時期。聲請許可起訴，應同時補行應為之訴訟行為。許可起訴之聲請，行政法院得與補行之訴訟行為，合併裁判之。
+* 10 選舉罷免事件之爭議，除法律別有規定外，得依本法提起行政訴訟。
 
-* 11 人民提起行政訴訟，雖已逾期，但在再訴願決定書送達之次日起二個月內，曾向其他機關有不服再訴願決定之表示，並於該機關通知到達之次日起一個月內，向行政法院起訴者，視同已在法定期間內提起。
+* 11 前二條訴訟依其性質，準用撤銷、確認或給付訴訟有關之規定。
 
-* 12 原處分或決定之執行，除法律另有規定外，不因提起行政訴訟而停止。但行政法院或為處分或決定之機關，得依職權或依原告之請求停止之。
+* 12 民事或刑事訴訟之裁判，以行政處分是否無效或違法為據者，應依行政爭訟程序確定之。前項行政爭訟程序已經開始者，於其程序確定前，民事或刑事法院應停止其審判程序。
 
-* 13 提起行政訴訟，應以書狀為之。訴訟應記載左列各款，由原告或代理人簽名、蓋章或按指印；其不能簽名或按指印者，得使他人代書姓名，並由代書人記明其事由並簽名：一、原告之姓名、年齡、性別、籍貫、職業、住所或居所。如係法人或其他團體，其名稱、事務所或營業所及法定代理人、管理人或代表人之姓名、年齡、性別、及其與法人或團體之關係。二、由代理人提起行政訴訟者，代理人之姓名、年齡、性別、職業、住所或居所。三、被告之機關。四、起訴之事實、理由、證據、再訴願決定，及收受其決定之年、月、日。五、年、月、日。
+* 13 對於公法人之訴訟，由其公務所所在地之行政法院管轄。其以公法人之機關為被告時，由該機關所在地之行政法院管轄。對於私法人或其他得為訴訟當事人之團體之訴訟，由其主事務所或主營業所所在地之行政法院管轄。對於外國法人或其他得為訴訟當事人之團體之訴訟，由其在中華民國之主事務所或主營業所所在地之行政法院管轄。
 
-* 14 行政法院審查訴狀，認為不應提起行政訴訟或違背法定程序者，應附理由以裁定駁回之。前項訴狀僅係不合法定程序，有補正之必要者，應由審判長限定期間，命其補正。
+* 14 前條以外之訴訟，由被告住所地之行政法院管轄，其住所地之行政法院不能行使職權者，由其居所地之行政法院管轄。被告在中華民國現無住所或住所不明者，以其在中華民國之居所，視為其住所；無居所或居所不明者，以其在中華民國最後之住所，視為其住所；無最後住所者，以中央政府所在地，視為其最後住所地。訴訟事實發生於被告居所地者，得由其居所地之行政法院管轄。
 
-* 15 行政法院受理行政訴訟，應將訴狀副本及其他必要書狀副本，送達於被告；並限定期間，命其答辯。
+* 15 因不動產之公法上權利或法律關係涉訟者，專屬不動產所在地之行政法院管轄。
 
-* 16 被告答辯書應依原告之人數，附具副本。行政法院應將答辯書副本，送達原告。
+* 16 有左列各款情形之一者，最高行政法院應依當事人之聲請或受訴行政法院之請求，指定管轄：一、有管轄權之行政法院因法律或事實不能行審判權者。二、因管轄區域境界不明，致不能辨別有管轄權之行政法院者。三、因特別情形由有管轄權之行政法院審判，恐影響公安或難期公平者。前項聲請得向受訴行政法院或最高行政法院為之。
 
-* 17 行政法院認為必要時，得限定期間，命原告、被告以書狀為第二次之答辯。
+* 17 定行政法院之管轄以起訴時為準。
 
-* 18 被告機關未委任訴訟代理人或未提出答辯書，經行政法院另定期間，以書面催告，而仍延置不理者，行政法院得以職權調查事實，逕為判決。
+* 18 民事訴訟法第三條、第六條、第十五條、第十七條、第二十條至第二十二條、第二十八條至第三十一條之規定，於本節準用之。
 
-* 19 行政訴訟就書狀判決之。但行政法院認為必要或依當事人聲請，得指定期日，傳喚原告、被告及參加人到庭，為言詞辯論。
+* 19 法官有左列情形之一者，應自行迴避，不得執行職務：一、有民事訴訟法第三十二條第一款至第六款情形之一者。二、曾在中央或地方機關參與該訴訟事件之行政處分或訴願決定者。三、曾參與該訴訟事件相牽涉之民刑事裁判者。四、曾參與該訴訟事件相牽涉之公務員懲戒事件議決者。五、曾參與該訴訟事件之前審裁判或更審前之原裁判者。六、曾參與該訴訟事件再審前之裁判者。但其迴避以一次為限。
 
-* 20 原告、被告及參加人於為言詞辯論時，得補充書狀或更正錯誤及提出新證據。
+* 20 民事訴訟法第三十三條至第三十八條之規定，除第三十六條之抗告期間外，於本節準用之。
 
-* 21 行政法院認為必要時，或依當事人之聲請，得傳喚證人或鑑定人。證人或鑑定人有關科罰之處分，由行政法院裁定之。
+* 21 前二條之規定於行政法院之書記官及通譯準用之。
 
-* 22 行政法院得指定評事或囑託普通法院或其他機關，調查證據。
+* 22 自然人、法人、中央及地方機關、非法人之團體，有當事人能力。
 
-* 23 關於行政訴訟程序上之請求，由行政法院裁定之。
+* 23 訴訟當事人謂原告、被告及依第四十一條與第四十二條參加訴訟之人。
 
-* 24 行政訴訟之裁判，應規定期限；其期限，由行政法院定之。
+* 24 經訴願程序之行政訴訟，其被告為左列機關：一、駁回訴願時之原處分機關。二、撤銷或變更原處分或決定時，為最後撤銷或變更之機關。
 
-* 25 行政訴訟之裁判，須以其他法律關係是否成立為準據者，於該法律關係尚未確定時，行政法院得依職權，或當事人之聲請，暫停行政訴訟程序之進行，並通知當事人。
+* 25 人民與受委託行使公權力之團體或個人，因受託事件涉訟者，以受託之團體或個人為被告。
 
-* 26 行政法院認起訴為有理由者，應以判決撤銷或變更原處分或決定。其附帶請求損害賠償者，並應為判決；認起訴為無理由者，應以判決駁回之；其附帶請求損害賠償者亦同。
+* 26 被告機關經裁撤或改組者，以承受其業務之機關為被告機關；無承受其業務之機關者，以其直接上級機關為被告機關。
 
-* 27 行政訴訟之判決，如係變更原處分或決定者，不得為較原處分或決定不利於原告之判決。
+* 27 能獨立以法律行為負義務者，有訴訟能力。法人、中央及地方機關、非法人之團體，應由其代表人或管理人為訴訟行為。前項規定於依法令得為訴訟上行為之代理人準用之。
 
-* 28 有左列各款情形之一者，當事人對於行政法院之判決，得向該院提起再審之訴：一、適用法規顯有錯誤者。二、判決理由與主文顯有矛盾者。三、判決法院之組織不合法者。四、依法律或裁判應迴避之評事參與裁判者。五、參與裁判之評事關於該訴訟違背職務，犯刑事上之罪者。六、當事人之代理人，關於該訴訟有刑事上應罰之行為，影響於判決者。七、為判決基礎之證物，係偽造或變造者。八、證人、鑑定人或通譯，就為判決基礎之證言、鑑定或通譯為虛偽陳述者。九、為判決基礎之民事或刑事判決及其他裁判或行政處分，依其後之確定裁判或行政處分已變更者。十、當事人發見未經斟酌之重要證物者。
+* 28 民事訴訟法第四十六條至第四十九條、第五十一條之規定，於本節準用之。
 
-* 29 再審之訴，應於二個月內提起之。前項期間，自判決送達時起算；其事由發生在後或知悉在後者，自發生或知悉時起算。
+* 29 多數有共同利益之人得由其中選定一人至五人為全體起訴或被訴。訴訟標的對於多數有共同利益之人，必須合一確定而未為前項選定者，行政法院得限期命為選定，逾期未選定者，行政法院得依職權指定之。訴訟繫屬後經選定或指定當事人者，其他當事人脫離訴訟。
 
-* 30 行政法院之裁定，有第二十八條第一項之情形者，得準用該條及第二十九條之規定，聲請再審。
+* 30 多數有共同利益之人於選定當事人或由行政法院依職權指定當事人後，得經全體當事人之同意更換或增減之。行政法院依前條第二項指定之當事人，如有必要，得依職權更換或增減之。依前兩項規定更換或增減者，原被選定或指定之當事人喪失其資格。
 
-* 31 行政法院對於當事人之送達，如因處所不明，得依職權為公示送達。
+* 31 被選定或被指定之人中有因死亡或其他事由喪失其資格者，他被選定或被指定之人得為全體為訴訟行為。
 
-* 32 行政訴訟判決之執行，由行政法院報請司法院轉有關機關執行之。
+* 32 第二十九條及第三十條訴訟當事人之選定、指定及其更換、增減應通知他造當事人。
 
-* 33 本法未規定者，準用民事訴訟法。
+* 33 被選定人非得全體之同意，不得為捨棄、認諾、撤回或和解。但訴訟標的對於多數有共同利益之各人非必須合一確定，經原選定人之同意，就其訴之一部為撤回或和解者，不在此限。
 
-* 34 本法自公布日施行。
+* 34 訴訟當事人之選定及其更換、增減，應以文書證之。
+
+* 35 以公益為目的之社團法人，於其章程所定目的範圍內，由多數有共同利益之社員，就一定之法律關係，授與訴訟實施權者，得為公共利益提起訴訟。前項規定於以公益為目的之非法人之團體準用之。前二項訴訟實施權之授與，應以文書證之。第三十三條之規定，於第一項之社團法人或第二項之非法人之團體，準用之。
+
+* 36 民事訴訟法第四十八條、第四十九條之規定，於本節準用之。
+
+* 37 二人以上於左列各款情形，得為共同訴訟人，一同起訴或一同被訴：一、為訴訟標的之行政處分係二以上機關共同為之者。二、為訴訟標的之權利、義務或法律上利益，為其所共同者。三、為訴訟標的之權利、義務或法律上利益，於事實上或法律上有同一或同種類之原因者。依前項第三款同種類之事實上或法律上原因行共同訴訟者，以被告之住居所、公務所、機關、主事務所或主營業所所在地在同一行政法院管轄區域內者為限。
+
+* 38 共同訴訟中，一人之行為或他造對於共同訴訟人中一人之行為及關於其一人所生之事項，除別有規定外，其利害不及於他共同訴訟人。
+
+* 39 訴訟標的對於共同訴訟之各人，必須合一確定者，適用左列各款之規定：一、共同訴訟人中一人之行為有利益於共同訴訟人者，其效力及於全體；不利益者，對於全體不生效力。二、他造對於共同訴訟人中一人之行為，其效力及於全體。三、共同訴訟人中之一人，生有訴訟當然停止或裁定停止之原因者，其當然停止或裁定停止之效力及於全體。
+
+* 40 共同訴訟人各有續行訴訟之權。行政法院指定期日者，應通知各共同訴訟人到場。
+
+* 41 訴訟標的對於第三人及當事人一造必須合一確定者，行政法院應以裁定命該第三人參加訴訟。
+
+* 42 行政法院認為撤銷訴訟之結果，第三人之權利或法律上利益將受損害者，得依職權命其獨立參加訴訟，並得因該第三人之聲請，裁定允許其參加。前項參加，準用第三十九條第三款之規定。參加人並得提出獨立之攻擊或防禦方法。前二項規定，於其他訴訟準用之。訴願人已向高等行政法院提起撤銷訴訟，利害關係人就同一事件再行起訴者，視為第一項之參加。
+
+* 43 第三人依前條規定聲請參加訴訟者，應向本訴訟繫屬之行政法院提出參加書狀，表明左列各款事項：一、本訴訟及當事人。二、參加人之權利或法律上利益，因撤銷訴訟之結果將受如何之損害。三、參加訴訟之陳述。行政法院認前項聲請不合前條規定者，應以裁定駁回之。關於前項裁定，得為抗告。駁回參加之裁定未確定前，參加人得為訴訟行為。
+
+* 44 行政法院認其他行政機關有輔助一造之必要者，得命其參加訴訟。前項行政機關或有利害關係之第三人亦得聲請參加。
+
+* 45 命參加之裁定應記載訴訟程度及命參加理由，送達於訴訟當事人。行政法院為前項裁定前，應命當事人或第三人以書狀或言詞為陳述。對於命參加訴訟之裁定，不得聲明不服。
+
+* 46 第四十一條之參加訴訟，準用第三十九條之規定。
+
+* 47 判決對於經行政法院依第四十一條及第四十二條規定，裁定命其參加或許其參加而未為參加者，亦有效力。
+
+* 48 民事訴訟法第五十九條至第六十一條、第六十三條至第六十七條之規定，於第四十四條之參加訴訟準用之。
+
+* 49 當事人得委任代理人為訴訟行為。但每一當事人委任之訴訟代理人不得逾三人。行政訴訟應以律師為訴訟代理人。非律師具有左列情形之一者，亦得為訴訟代理人：一、依法令取得與訴訟事件有關之代理人資格者。二、具有該訴訟事件之專業知識者。三、因職務關係為訴訟代理人者。四、與當事人有親屬關係者。前項第二款、第四款之訴訟代理人，行政法院認為不適當時，得以裁定禁止之。
+
+* 50 訴訟代理人應於最初為訴訟行為時提出委任書。但由當事人以言詞委任經行政法院書記官記明筆錄者，不在此限。
+
+* 51 訴訟代理人就其受委任之事件，有為一切訴訟行為之權。但捨棄、認諾、撤回、和解、提起反訴、上訴或再審之訴及選任代理人，非受特別委任不得為之。關於強制執行之行為或領取所爭物，準用前項但書之規定。如於第一項之代理權加以限制者，應於前條之委任書或筆錄內表明。
+
+* 52 訴訟代理人有二人以上者，均得單獨代理當事人。違反前項之規定而為委任者，仍得單獨代理之。
+
+* 53 訴訟代理權不因本人死亡、破產或訴訟能力喪失而消滅。法定代理有變更或機關經裁撤、改組者，亦同。
+
+* 54 訴訟委任之終止，應以書狀提出於行政法院，由行政法院送達於他造。由訴訟代理人終止委任者，自為終止之意思表示之日起十五日內，仍應為防衛本人權利所必要之行為。
+
+* 55 當事人或訴訟代理人經行政法院之許可，得於期日偕同輔佐人到場。行政法院認為必要時亦得命當事人或訴訟代理人偕同輔佐人到場。前二項之輔佐人，行政法院認為不適當時，得撤銷其許可或禁止其續為訴訟行為。
+
+* 56 民事訴訟法第七十二條、第七十五條及第七十七條之規定，於本節準用之。
+
+* 57 當事人書狀，除別有規定外，應記載左列各款事項：一、當事人姓名、性別、年齡、身分證明文件字號、職業及住所或居所；當事人為法人、機關或其他團體者，其名稱及所在地、事務所或營業所。二、有法定代理人、代表人或管理人者，其姓名、性別、年齡、身分證明文件字號、職業、住所或居所，及其與法人、機關或團體之關係。三、有訴訟代理人者，其姓名、性別、年齡、身分證明文件字號、職業、住所或居所。四、應為之聲明。五、事實上及法律上之陳述。六、供證明或釋明用之證據。七、附屬文件及其件數。八、行政法院。九、年、月、日。
+
+* 58 當事人、法定代理人、代表人、管理人或訴訟代理人應於書狀內簽名或蓋章；其以指印代簽名者，應由他人代書姓名，記明其事由並簽名。
+
+* 59 民事訴訟法第一百十八條至第一百二十一條之規定，於本節準用之。
+
+* 60 於言詞辯論外，關於訴訟所為之聲明或陳述，除依本法應用書狀者外，得於行政法院書記官前以言詞為之。前項情形，行政法院書記官應作筆錄，並於筆錄內簽名。前項筆錄準用第五十七條及民事訴訟法第一百十八條至第一百二十條之規定。
+
+* 61 送達除別有規定外，由行政法院書記官依職權為之。
+
+* 62 送達由行政法院書記官交執達員或郵政機關行之。由郵政機關行送達者，以郵務人員為送達人；其實施辦法由司法院會同有關機關定之。
+
+* 63 行政法院得向送達地高等行政法院為送達之囑託；必要時亦得向送達地之地方法院為送達之囑託。
+
+* 64 對於無訴訟能力人為送達者，應向其法定代理人為之。對於法人、中央及地方機關或非法人之團體為送達者，應向其代表人或管理人為之。法定代理人、代表人或管理人有二人以上者，送達得僅向其中一人為之。無訴訟能力人為訴訟行為，未向行政法院陳明其法定代理人者，於補正前，行政法院得向該無訴訟能力人為送達。
+
+* 65 對於在中華民國有事務所或營業所之外國法人或團體為送達者，應向其在中華民國之代表人或管理人為之。前項代表人或管理人有二人以上者，送達得僅向其中一人為之。
+
+* 66 訴訟代理人除受送達之權限受有限制者外，送達應向該代理人為之。但審判長認為必要時，得命送達於當事人本人。
+
+* 67 當事人或代理人經指定送達代收人，向受訴行政法院陳明者，應向該代收人為送達。但審判長認為必要時，得命送達於當事人本人。當事人或代理人於受訴行政法院所在地無住居所、事務所及營業所者，審判長得命其於一定期間內，指定送達代收人。如不於前項期間內指定送達代收人而陳明者，行政法院書記官得報經審判長許可，將應送達之文書，註明該當事人或代理人之住居所、事務所或營業所，交付郵政機關以掛號發送，以交付文書時視為送達之時。
+
+* 68 送達代收人經指定陳明後，其效力及於同地之各級行政法院。但該當事人或代理人別有陳明者，不在此限。
+
+* 69 當事人或代理人於中華民國無住居所、事務所及營業所者，應指定送達代收人向受訴行政法院陳明。
+
+* 70 當事人或代理人未依前條規定指定送達代收人者，行政法院得將應送達之文書交付郵政機關以掛號發送。
+
+* 71 送達，於應受送達人之住居所、事務所或營業所行之。但在他處會晤應受送達人時，得於會晤處所行之。對於法人、機關、非法人之團體之代表人或管理人為送達者，應向其事務所、營業所或機關所在地行之。但必要時亦得於會晤之處所或其住居所行之。應受送達人有就業處所者，亦得向該處所為送達。
+
+* 72 送達於住居所、事務所、營業所或機關所在地不獲會晤應受送達人者，得將文書付與有辨別事理能力之同居人、受雇人或願代為收受而居住於同一住宅之主人。前條所定送達處所之接收郵件人員，視為前項之同居人或受雇人。如同居人、受雇人、居住於同一住宅之主人或接收郵件人員為他造當事人者，不適用前二項之規定。
+
+* 73 送達不能依前二條規定為之者，得將文書寄存於送達地之自治或警察機關，並作送達通知書二份，一份黏貼於應受送達人住居所、事務所或營業所門首，一份交由鄰居轉交或置於應受送達人之信箱或其他適當之處所，以為送達。前項情形，如係以郵務人員為送達人者，得將文書寄存於附近之郵政機關。寄存之文書自寄存之日起，寄存機關應保存三個月。
+
+* 74 應受送達人拒絕收領而無法律上理由者，應將文書置於送達處所，以為送達。前項情形，如有難達留置情事者，準用前條之規定。
+
+* 75 送達，除由郵政機關行之者外，非經審判長或受命法官、受託法官或送達地高等行政法院法官或地方法院法官之許可，不得於星期日或其他休息日或日出前、日沒後為之。但應受送達人不拒絕收領者，不在此限。前項許可，行政法院書記官應於送達之文書內記明。
+
+* 76 行政法院書記官於法院內將文書付與應受送達人者，應命受送達人提出收據附卷。依第六十七條第三項之規定為送達者，行政法院書記官應作記載該事由及年、月、日、時之證書附卷。
+
+* 77 於外國或境外為送達者，應囑託該國管轄機關或駐在該國之中華民國大使、公使、領事或其他駐外人員為之。不能依前項之規定辦理者，行政法院得將應送達之文書，交付郵政機關以掛號發送。
+
+* 78 對於駐在外國之中華民國大使、公使、領事或其他駐外人員為送達者，應囑託外交部為之。
+
+* 79 對於在軍隊或軍艦服役之軍人為送達者，應囑託該管軍事機關或長官為之。
+
+* 80 對於在監所人為送達者，應囑託該監所長官為之。
+
+* 81 行政法院對於當事人之送達，如有左列情形之一者，得依聲請或依職權為公示送達：一、應為送達之處所不明者。二、於有治外法權人住居所或事務所為送達而無效者。三、於外國為送達，不能依第七十七條之規定辦理或預知雖依該條規定辦理而無效者。
+
+* 82 公示送達，自將公告或通知書黏貼牌示處之日起，其登載公報或新聞紙者，自最後登載之日起，經二十日發生效力；於依前條第三款為公示送達者，經六十日發生效力。但對同一當事人仍為公示送達者，自黏貼牌示處之翌日起發生效力。
+
+* 83 民事訴訟法第一百二十六條、第一百三十一條、第一百三十五條、第一百四十一條、第一百四十二條、第一百四十四條、第一百四十八條、第一百五十一條及第一百五十三條之規定，於本節準用之。
+
+* 84 期日，除別有規定外，由審判長依職權定之。期日，除有不得已之情形外，不得於星期日或其他休息日定之。
+
+* 85 審判長定期日後，行政法院書記官應作通知書，送達於訴訟關係人。但經審判長面告以所定之期日命其到場，或訴訟關係人曾以書狀陳明屆期到場者，與送達有同一之效力。
+
+* 86 期日應為之行為於行政法院內為之。但在行政法院內不能為或為之而不適當者，不在此限。
+
+* 87 期日，以朗讀案由為始。期日，如有重大理由，得變更或延展之。變更或延展期日，除別有規定外，由審判長裁定之。
+
+* 88 期間，除法定者外，由行政法院或審判長酌量情形定之。行政法院或審判長所定期間，自送達定期間之文書時起算，無庸送達者，自宣示定期間之裁判時起算。期間之計算，依民法之規定。
+
+* 89 當事人不在行政法院所在地住居者，計算法定期間，應扣除其在途之期間。但有訴訟代理人住居行政法院所在地，得為期間內應為之訴訟行為者，不在此限。前項應扣除之在途期間，由司法院定之。
+
+* 90 期間，如有重大理由得伸長或縮短之。但不變期間不在此限。伸長或縮短期間由行政法院裁定。但期間係審判長所定者，由審判長裁定。
+
+* 91 因天災或其他不應歸責於己之事由，致遲誤不變期間者，於其原因消滅後一個月內，如該不變期間少於一個月者，於相等之日數內，得聲請回復原狀。前項期間不得伸長或縮短之。遲誤不變期間已逾一年者，不得聲請回復原狀，遲誤第一百零六條之起訴期間已逾三年者，亦同。第一項之聲請應以書狀為之，並釋明遲誤期間之原因及其消滅時期。
+
+* 92 因遲誤上訴或抗告期間而聲請回復原狀者，向為裁判之原行政法院為之；遲誤其他期間者，向管轄該期間內應為之訴訟行為之行政法院為之。聲請回復原狀，應同時補行期間內應為之訴訟行為。
+
+* 93 回復原狀之聲請，由受聲請之行政法院與補行之訴訟行為合併裁判之。但原行政法院認其聲請應行許可，而將上訴或抗告事件送交上級行政法院者，應由上級行政法院合併裁判。因回復原狀而變更原裁判者，準用第二百八十二條之規定。
+
+* 94 受命法官或受託法官關於其所為之行為，得定期日及期間。第八十四條至第八十七條、第八十八條第一項、第二項及第九十條之規定，於受命法官或受託法官定期日及期間者，準用之。
+
+* 95 當事人書狀、筆錄、裁判書及其他關於訴訟事件之文書，行政法院應保存者，應由行政法院書記官編為卷宗。卷宗滅失事件之處理，準用民刑事訴訟卷宗滅失案件處理法之規定。
+
+* 96 當事人得向行政法院書記官請求閱覽、抄錄、影印或攝影卷內文書，或預納費用請求付與繕本、影本或節本。第三人經當事人同意或釋明有法律上之利害關係，經行政法院院長許可者，亦得為前項之請求。
+
+* 97 裁判草案及其準備或評議文件，不得交當事人或第三人閱覽、抄錄、影印或攝影，或付與繕本、影本或節本；裁判書在宣示前，或未經法官簽名者，亦同。
+
+* 98 行政訴訟不徵收裁判費。裁判費以外其他進行訴訟之必要費用，其徵收辦法由司法院定之。前項費用由敗訴之當事人負擔，但為第一百九十八條之判決時，由被告負擔。
+
+* 99 因可歸責於參加人之事由致生無益之費用者，行政法院得命該參加人負擔其全部或一部。依第四十四條參加訴訟所生之費用，由參加人負擔。但他造當事人依第九十八條第三項及準用民事訴訟法第七十九條至第八十四條規定應負擔之訴訟費用，仍由該當事人負擔。
+
+* 100 進行訴訟之必要費用，行政法院得定期命當事人預納。逾期未納者，由國庫墊付，並於判決確定後，依職權裁定，向應負擔訴訟費用之人徵收之。前項裁定得為執行名義。
+
+* 101 當事人無資力支出訴訟費用者，行政法院應依聲請，以裁定准予訴訟救助。但顯無勝訴之望者，不在此限。
+
+* 102 聲請訴訟救助，應向受訴行政法院為之。聲請人無資力支出訴訟費用之事由應釋明之。前項釋明，得由受訴行政法院管轄區域內有資力之人出具保證書代之。前項保證書內，應載明具保證書人於聲請訴訟救助人負擔訴訟費用時，代繳暫免之費用。
+
+* 103 准予訴訟救助者，暫行免付進行訴訟必要之費用。
+
+* 104 民事訴訟法第七十九條至第八十五條、第八十七條至第九十五條、第一百零八條、第一百十一條至第一百十三條之規定，於本節準用之。
+
+* 105 起訴，應以訴狀表明左列各款事項，提出於行政法院為之：一、當事人。二、起訴之聲明。三、訴訟標的及其原因事實。訴狀內宜記載適用程序上有關事項、證據方法及其他準備言詞辯論之事項；其經訴願程序者，並附具決定書。
+
+* 106 撤銷訴訟之提起，應於訴願決定書送達後二個月之不變期間內為之。但訴願人以外之利害關係人知悉在後者，自知悉時起算。撤銷訴訟，自訴願決定書送達後，已逾三年者，不得提起。
+
+* 107 原告之訴，有左列各款情形之一者，行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬行政法院之權限者。二、訴訟事件不屬受訴行政法院管轄而不能請求指定管轄，亦不能為移送訴訟之裁定者。三、原告或被告無當事人能力者。四、原告或被告未由合法之法定代理人、代表人或管理人為訴訟行為者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴逾越法定期限者。七、當事人就已起訴之事件，於訴訟繫屬中更行起訴者。八、本案經終局判決後撤回其訴，復提起同一之訴者。九、訴訟標的為確定判決或和解之效力所及者。十、起訴不合程式或不備其他要件者。撤銷訴訟，原告於訴狀誤列被告機關者，準用第一項之規定。原告之訴，依其所訴之事實，在法律上顯無理由者，行政法院得不經言詞辯論，逕以判決駁回之。
+
+* 108 行政法院除依前條規定駁回原告之訴或移送者外，應將訴狀送達於被告。並得命被告以答辯狀陳述意見。撤銷訴訟，原處分及訴願機關經行政法院通知後，應於十日內將卷證送交行政法院。
+
+* 109 審判長認已適於為言詞辯論時，應速定言詞辯論期日。前項言詞辯論期日，距訴狀之送達，至少應有十日為就審期間。但有急迫情形者，不在此限。
+
+* 110 訴訟繫屬中，為訴訟標的之法律關係雖移轉於第三人，於訴訟無影響。但第三人如經兩造同意，得代當事人承當訴訟。前項情形，僅他造不同意者，移轉之當事人或第三人得聲請行政法院以裁定許第三人承當訴訟。前項裁定得為抗告。行政法院知悉訴訟標的有移轉者，應即以書面將訴訟繫屬情形通知第三人。訴願決定後，為訴訟標的之法律關係移轉於第三人者，得由受移轉人提起撤銷訴訟。
+
+* 111 訴狀送達後，原告不得將原訴變更或追加他訴。但經被告同意，或行政法院認為適當者，不在此限。被告於訴之變更或追加無異議，而為本案之言詞辯論者，視為同意變更或追加。有左列情形之一者，訴之變更或追加，應予准許：一、訴訟標的對於數人必須合一確定者，追加其原非當事人之人為當事人。二、訴訟標的之請求雖有變更，但其請求之基礎不變者。三、因情事變更而以他項聲明代最初之聲明。四、應提起確認訴訟，誤為提起撤銷訴訟者。五、依第一百九十七條或其他法律之規定，應許為訴之變更或追加者。前三項規定，於變更或追加之新訴為撤銷訴訟而未經訴願程序者不適用之。對於行政法院以訴為非變更追加，或許訴之變更追加之裁判，不得聲明不服。但撤銷訴訟，主張其未經訴願程序者，得隨同終局判決聲明不服。
+
+* 112 被告於言詞辯論終結前，得在本訴繫屬之行政法院提起反訴。但反訴為撤銷訴訟者，不得提起。原告對於反訴，不得復行提起反訴。反訴之請求如專屬他行政法院管轄，或與本訴之請求或其防禦方法不相牽連者，不得提起。被告意圖延滯訴訟而提起反訴者，行政法院得駁回之。
+
+* 113 原告於判決確定前得撤回訴之全部或一部。但被告已為本案之言詞辯論者，應得其同意。訴之撤回，應以書狀為之。但在期日得以言詞為之。於期日所為之撤回，應記載於筆錄，如他造不在場，應將筆錄送達。訴之撤回，他造於收受撤回書狀或筆錄之送達後十日內未提出異議者，視為同意撤回。他造於期日到場，自訴之撤回之日起，十日內未提出異議者，亦同。
+
+* 114 訴之撤回違反公益者，不得為之。行政法院認訴之撤回違反公益，或有其他不合法之情形者，應於四個月內續行訴訟，並依第一百九十三條裁定，或於終局判決中說明之。
+
+* 115 民事訴訟法第二百四十五條、第二百四十六條、第二百四十八條、第二百五十二條、第二百五十三條、第二百五十七條、第二百六十一條、第二百六十三條及第二百六十四條之規定，於本節準用之。
+
+* 116 原處分或決定之執行，除法律另有規定外，不因提起行政訴訟而停止。行政訴訟繫屬中，行政法院認為原處分或決定之執行，將發生難於回復之損害，且有急迫情事者，得依職權或依聲請裁定停止執行。但於公益有重大影響，或原告之訴在法律上顯無理由者，不得為之。於行政訴訟起訴前，如原處分或決定之執行將發生難於回復之損害，且有急迫情事者，行政法院亦得依受處分人或訴願人之聲請，裁定停止執行。但於公益有重大影響者，不在此限。行政法院為前二項裁定前，應先徵詢當事人之意見。如原處分或決定機關已依職權或依聲請停止執行者，應為駁回聲請之裁定。停止執行之裁定，得停止原處分或決定之效力、處分或決定之執行或程序之續行之全部或部份。
+
+* 117 前條規定，於確認行政處分無效之訴訟準用之。
+
+* 118 停止執行之原因消滅，或有其他情事變更之情形，行政法院得依職權或依聲請撤銷停止執行之裁定。
+
+* 119 關於停止執行或撤銷停止執行之裁定，得為抗告。
+
+* 120 原告準備言詞辯論之書狀，依第一百零五條之規定。被告因準備言詞辯論，宜於未逾就審期間二分之一以前，提出答辯狀。
+
+* 121 行政法院因使辯論易於終結，認為必要時，得於言詞辯論前，為左列各款之處置：一、命當事人、法定代理人、代表人或管理人本人到場。二、命當事人提出圖案、表冊、外國文文書之譯本或其他文書、物件。三、行勘驗、鑑定或囑託機關、團體為調查。四、通知證人或鑑定人，及調取或命第三人提出文書、物件。五、使受命法官或受託法官調查證據。行政法院因闡明或確定訴訟關係，於言詞辯論時，得為前項第一款至第三款之處置，並得將當事人或第三人提出之文書、物件暫留置之。
+
+* 122 言詞辯論，以當事人聲明起訴之事項為始。當事人應就訴訟關係為事實上及法律上之陳述。當事人不得引用文件以代言詞陳述。但以舉文件之辭句為必要時，得朗讀其必要之部分。
+
+* 123 行政法院調查證據，除別有規定外，於言詞辯論期日行之。當事人應依第二編第一章第四節之規定，聲明所用之證據。
+
+* 124 審判長開始、指揮及終結言詞辯論，並宣示行政法院之裁判。審判長對於不服從言詞辯論之指揮者，得禁止發言。言詞辯論須續行者，審判長應速定其期日。
+
+* 125 行政法院應依職權調查事實關係，不受當事人主張之拘束。審判長應注意使當事人得為事實上及法律上適當完全之辯論。審判長應向當事人發問或告知，令其陳述事實、聲明證據，或為其他必要之聲明及陳述；其所聲明或陳述有不明瞭或不完足者，應令其敘明或補充之。陪席法官告明審判長後，得向當事人發問或告知。
+
+* 126 凡依本法使受命法官為行為者，由審判長指定之。行政法院應為之囑託，除別有規定外，由審判長行之。
+
+* 127 分別提起之數宗訴訟係基於同一或同種類之事實上或法律上之原因者，行政法院得命合併辯論。命合併辯論之數宗訴訟，得合併裁判之。
+
+* 128 行政法院書記官應作言詞辯論筆錄，記載左列各款事項：一、辯論之處所及年、月、日。二、法官、書記官及通譯姓名。三、訴訟事件。四、到場當事人、法定代理人、代表人、管理人、訴訟代理人、輔佐人及其他經通知到場之人姓名。五、辯論之公開或不公開；如不公開者，其理由。
+
+* 129 言詞辯論筆錄內，應記載辯論進行之要領，並將左列各款事項記載明確：一、訴訟標的之捨棄、認諾、自認及訴之撤回。二、證據之聲明或撤回，及對於違背訴訟程序規定之異議。三、當事人所為其他重要聲明或陳述，及經告知而不為聲明或陳述之情形。四、依本法規定應記載筆錄之其他聲明或陳述。五、證人或鑑定人之陳述，及勘驗所得之結果。六、審判長命令記載之事項。七、不作裁判書附卷之裁判。八、裁判之宣示。
+
+* 130 筆錄或筆錄內所引用附卷或作為附件之文書內所記前條第一款至第六款事項，應依聲請於法庭向關係人朗讀或令其閱覽，並於筆錄內附記其事由。關係人對於筆錄所記有異議者，行政法院書記官得更正或補充之。如以異議為不當，應於筆錄內附記其異議。以機器記錄言詞辯論之進行者，其實施辦法由司法院定之。
+
+* 131 第一百二十一條第二項、第一百二十四條及民事訴訟法第二百條、第二百零七條、第二百零八條、第二百十三條第二項、第二百十四條、第二百十七條、第二百六十八條關於法院或審判長權限之規定，於受命法官行準備程序時準用之。
+
+* 132 民事訴訟法第一百九十五條至第一百九十七條、第二百條、第二百零一條、第二百零四條、第二百零六條至第二百零八條、第二百十條、第二百十一條、第二百十四條、第二百十五條、第二百十七條至第二百十九條、第二百六十五條、第二百六十七條、第二百六十八條、第二百七十條、第二百七十一條、第二百七十三條至第二百七十六條之規定，於本節準用之。
+
+* 133 行政法院於撤銷訴訟，應依職權調查證據；於其他訴訟，為維護公益者，亦同。
+
+* 134 前條訴訟，當事人主張之事實，雖經他造自認，行政法院仍應調查其他必要之證據。
+
+* 135 當事人因妨礙他造使用，故意將證據滅失、隱匿或致礙難使用者，行政法院得審酌情形認他造關於該證據之主張或依該證據應證之事實為真實。前項情形，於裁判前應令當事人有辯論之機會。
+
+* 136 除本法有規定者外，民事訴訟法第二百七十七條之規定於本節準用之。
+
+* 137 習慣及外國之現行法為行政法院所不知者，當事人有舉證之責任。但行政法院得依職權調查之。
+
+* 138 行政法院得囑託普通法院或其他機關、學校、團體調查證據。
+
+* 139 行政法院認為適當時，得使庭員一人為受命法官或囑託他行政法院指定法官調查證據。
+
+* 140 受訴行政法院於言詞辯論前調查證據，或由受命法官、受託法官調查證據者，行政法院書記官應作調查證據筆錄。第一百二十八條至第一百三十條之規定，於前項筆錄準用之。受託法官調查證據筆錄，應送送受訴行政法院。
+
+* 141 調查證據之結果，應告知當事人為辯論。於受訴行政法院外調查證據者，當事人應於言詞辯論時陳述其調查之結果。但審判長得令庭員或行政法院書記官朗讀調查證據筆錄代之。
+
+* 142 除法律別有規定外，不問何人，於他人之行政訴訟有為證人之義務。
+
+* 143 證人受合法之通知，無正當理由而不到場者，行政法院得以裁定處新臺幣三千元以下罰鍰。證人已受到項裁定，經再次通知仍不到場者，得再處新臺幣一萬五千元以下罰鍰，並得拘提之。拘提證人，準用刑事訴訟法關於拘提被告之規定；證人為現役軍人者，應以拘票囑託該管長官執行。處證人罰鍰之裁定，得為抗告，抗告中應停止執行。
+
+* 144 以公務員、中央民意代表或曾為公務員、中央民意代表之人為證人，而就其職務上應守秘密之事項訊問者，應得該監督長官或民意機關之同意。前項同意，除有妨害國家高度機密者外，不得拒絕。以受公務機關委託承辦公務之人為證人者，準用前二項之規定。
+
+* 145 證人恐因陳述致自己或左列之人受刑事訴追或蒙恥辱者，得拒絕證言：一、證人之配偶、前配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係或與證人訂有婚約者。二、證人之監護人或受監護人。
+
+* 146 證人有左列各款情形之一者，得拒絕證言：一、證人有第一百四十四條之情形者。二、證人為醫師、藥師、藥商、助產士、宗教師、律師、會計師或其他從事相類業務之人或其業務上佐理人或曾任此等職務之人，就其因業務所知悉有關他人秘密之事項受訊問者。三、關於技術上或職業上之秘密受訊問者。前項規定，於證人秘密之責任已經免除者，不適用之。
+
+* 147 依前二條規定，得拒絕證言者，審判長應於訊問前或知有該項情形時告知之。
+
+* 148 證人不陳明拒絕之原因事實而拒絕證言，或以拒絕為不當之裁定已確定而仍拒絕證言者，行政法院得以裁定處新臺幣三千元以下罰鍰。前項裁定得為抗告，抗告中應停止執行。
+
+* 149 審判長於訊問前，應命證人各別具結。但其應否具結有疑義者，於訊問後行之。審判長於證人具結前，應告以具結之義務及偽證之處罰。
+
+* 150 以未滿十六歲或因精神障礙不解具結意義及其效果之人為證人者，不得令其具結。
+
+* 151 以左列各款之人為證人者，得不令其具結：一、證人為當事人之配偶、前配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係或與當事人訂有婚約者。二、有第一百四十五條情形而不拒絕證言者。三、當事人之受雇人或同居人。
+
+* 152 證人就與自己或第一百四十五條所列之人有直接利害關係之事項受訊問者，得拒絕具結。
+
+* 153 第一百四十八條之規定，於證人拒絕具結者準用之。
+
+* 154 當事人得聲請審判長對於證人為必要之發問，審判長亦得許可當事人自行對於證人發問。審判長認為當事人聲請之發問，或經許可之自行發問有不當者，得不為發問或禁止之。關於發問之應否許可或禁止有異議者，行政法院應就其異議為裁定。
+
+* 155 行政法院應發給證人法定之日費及旅費；證人亦得於訊問完畢後請求之。但被拘提或無正當理由拒絕具結或證言者，不在此限。前項關於日費及旅費之裁定，得為抗告。證人所需之旅費，得依其請求預行酌給之。
+
+* 156 鑑定，除別有規定外，準用本法關於人證之規定。
+
+* 157 從事於鑑定所需之學術、技藝或職業，或經機關委任有鑑定職務者，於他人之行政訴訟有為鑑定人之義務。
+
+* 158 鑑定人不得拘提。
+
+* 159 鑑定人拒絕鑑定，雖其理由不合於本法關於拒絕證言之規定，如行政法院認為正當者，亦得免除其鑑定義務。
+
+* 160 鑑定人於法定之日費、旅費外，得請求相當之報酬。鑑定所需費用，得依鑑定人之請求預行酌給之。關於前二項請求之裁定，得為抗告。
+
+* 161 行政法院依第一百三十八條之規定，囑託機關、學校或團體陳述鑑定意見或審查之者，準用第一百六十條及民事訴訟法第三百三十五條至第三百三十七條之規定。其鑑定書之說明，由該機關、學校或團體所指定之人為之。
+
+* 162 行政法院認有必要時，得就訴訟事件之專業法律問題徵詢從事該學術研究之人，以書面或於審判期日到場陳述其法律上意見。前項意見，於裁判前應告知當事人使為辯論。第一項陳述意見之人，準用鑑定人之規定。但不得令其具結。
+
+* 163 左列各款文書，當事人有提出之義務：一、該當事人於訴訟程序中曾經引用者。二、他造依法律規定，得請求交付或閱覽者。三、為他造之利益而作者。四、就與本件訴訟關係有關之事項所作者。五、商業帳簿。
+
+* 164 公務員或機關掌管之文書，行政法院得調取之。如該機關為當事人時，並有提出之義務。前項情形，除有妨害國家高度機密者外，不得拒絕。
+
+* 165 當事人無正當理由不從提出文書之命者，行政法院得審酌情形認他造關於該文書之主張或依該文書應證之事實為真實。前項情形，於裁判前應令當事人有辯論之機會。
+
+* 166 聲明書證係使用第三人所執之文書者，應聲請行政法院命第三人提出或定由舉證人提出之期間。民事訴訟法第三百四十二條第二項之規定，於前項聲請準用之。文書為第三人所執之事由第三人有提出義務之原因，應釋明之。
+
+* 167 行政法院認應證之事實重要且舉證人之聲請正當者，應以裁定命第三人提出文書或定由舉證人提出文書之期間。行政法院為前項裁定前，應使該第三人有陳述意見之機會。
+
+* 168 關於第三人提出文書之義務，準用第一百四十四條至第一百四十七條及第一百六十三條第二款至第五款之規定。
+
+* 169 第三人無正當理由不從提出文書之命者，行政法院得以裁定處新臺幣三千元以下罰鍰；於必要時，並得為強制處分。前項強制處分之執行，適用第三百零六條之規定。第一項裁定得為抗告，抗告中應停止執行。
+
+* 170 第三人得請求提出文書之費用。第一百五十五條之規定，於前項情形準用之。
+
+* 171 文書之真偽，得依核對筆跡或印跡證之。行政法院得命當事人或第三人提出文書，以供核對。核對筆跡或印跡，適用關於勘驗之規定。
+
+* 172 無適當之筆跡可供核對者，行政法院得指定文字，命該文書之作成名義人書寫，以供核對。文書之作成名義人無正當理由不從前項之命者，準用第一百六十五條或第一百六十九條之規定。因供核對所書寫之文字應附於筆錄；其他供核對之文件不須發還者，亦同。
+
+* 173 本法關於文書之規定，於文書外之物件，有與文書相同之效用者，準用之。文書或前項物件，須以科技設備始能呈現其內容或提出原件有事實上之困難者，得僅提出呈現其內容之書面並證明其內容與原件相符。
+
+* 174 第一百六十四條至第一百七十條之規定，於勘驗準用之。
+
+* 175 保全證據之聲請，在起訴後，向受訴行政法院為之；在起訴前，向受訊問人住居地或證物所在地之高等行政法院為之。遇有急迫情形時，於起訴後，亦得向前項高等行政法院聲請保全證據。
+
+* 176 民事訴訟法第二百十五條、第二百十七條至第二百十九條、第二百七十八條、第二百八十一條、第二百八十二條、第二百八十四條至第二百八十六條、第二百九十一條至第二百九十三條、第二百九十五條、第二百九十六條、第二百九十八條至第三百零一條、第三百零四條、第三百零五條、第三百零九條、第三百十條、第三百十三條、第三百十六條至第三百十九條、第三百二十一條、第三百二十二條、第三百二十五條至第三百二十七條、第三百三十一條至第三百三十七條、第三百三十九條、第三百四十一條至第三百四十三條、第三百五十二條至第三百五十八條、第三百六十一條、第三百六十四條至第三百六十六條、第三百六十八條、第三百七十條至第三百七十六條之規定，除第三百三十三條之抗告期間外，於本節準用之。
+
+* 177 行政訴訟之裁判須以民事法律關係是否成立為準據，而該法律關係已經訴訟繫屬尚未終結者，行政法院應以裁定停止訴訟程序。除前項情形外，有民事、刑事或其他行政爭訟牽涉行政訴訟之裁判者，行政法院在該民事、刑事或其他行政爭訟終結前，得以裁定停止訴訟程序。
+
+* 178 行政法院就其受理訴訟之權限，如與普通法院確定裁判之見解有異時，應以裁定停止訴訟程序，並聲請司法院大法官解釋。
+
+* 179 本於一定資格，以自己名義為他人任訴訟當事人之人，喪失其資格或死亡者，訴訟程序在有同一資格之人承受其訴訟以前當然停止。依第二十九條規定，選定或指定為訴訟當事人之人全體喪失其資格者，訴訟程序在該有共同利益人全體或新選定或指定為訴訟當事人之人承受其訴訟以前當然停止。
+
+* 180 第一百七十九條之規定，於有訴訟代理人時不適用之。但行政法院得酌量情形裁定停止其訴訟程序。
+
+* 181 訴訟程序當然停止後，依法律所定之承受訴訟之人，於得為承受時，應即為承受之聲明。他造當事人亦得聲明承受訴訟。
+
+* 182 訴訟程序當然或裁定停止間，行政法院及當事人不得為關於本案之訴訟行為。但於言詞辯論終結後當然停止者，本於其辯論之裁判得宣示之。訴訟程序當然或裁定停止者，期間停止進行；自停止終竣時起，其期間更始進行。
+
+* 183 除撤銷訴訟外，當事人得以合意停止訴訟程序。但行政法院認有維護公益之必要者，應於四個月內續行訴訟。前項合意，應由兩造向受訴行政法院陳明。不變期間之進行不因第一項合意停止而受影響。
+
+* 184 除前條第一項但書情形外，合意停止訴訟程序之當事人，自陳明合意停止時起，如於四個月內不續行訴訟者，視為撤回其訴；續行訴訟而再以合意停止訴訟程序者，以一次為限。如再次陳明合意停止訴訟程序，視為撤回其訴。
+
+* 185 當事人兩造無正當理由遲誤言詞辯論期日者，除撤銷訴訟或別有規定外，視為合意停止訴訟程序。如於四個月內不續行訴訟者，視為撤回其訴。前項訴訟程序停止間，行政法院於認為必要時，得依職權續行訴訟。如無正當理由兩造仍遲誤不到者，視為撤回其訴。
+
+* 186 民事訴訟法第一百六十八條至第一百七十一條、第一百七十三條、第一百七十四條、第一百七十六條至第一百八十一條、第一百八十五條至第一百八十七條之規定，於本節準用之。
+
+* 187 裁判，除依本法應用判決者外，以裁定行之。
+
+* 188 行政訴訟除別有規定外，應本於言詞辯論而為裁判。法官非參與裁判基礎之辯論者，不得參與裁判。裁定得不經言詞辯論為之。裁定前不行言詞辯論者，除別有規定外，得命關係人以書狀或言詞為陳述。
+
+* 189 行政法院為裁判時，應斟酌全辯論意旨及調查證據之結果，依論理及經驗法則判斷事實之真偽。但別有規定者，不在此限。依前項判斷而得心證之理由，應記明於判決。
+
+* 190 行政訴訟達於可為裁判之程度者，行政法院應為終局判決。
+
+* 191 訴訟標的之一部，或以一訴主張之數項標的，其一達於可為裁判之程度者，行政法院得為一部之終局判決。前項規定，於命合併辯論之數宗訴訟，其一達於可為裁判之程度者，準用之。
+
+* 192 各種獨立之攻擊或防禦方法，達於可為裁判之程度者，行政法院得為中間判決；請求之原因及數額俱有爭執時，行政法院以其原因為正當者，亦同。
+
+* 193 行政訴訟進行中所生程序上之爭執，達於可為裁判之程度者，行政法院得先為裁定。
+
+* 194 撤銷訴訟及其他有關維護公益之訴訟，當事人兩造於言詞辯論期日無正當理由均不到場者，行政法院得依職權調查事實，不經言詞辯論，逕為判決。
+
+* 195 行政法院認原告之訴為有理由者，除別有規定外，應為其勝訴之判決；認為無理由者，應以判決駁回之。撤銷訴訟之判決，如係變更原處分或決定者，不得為較原處分或決定不利於原告之判決。
+
+* 196 行政處分已執行完畢，行政法院為撤銷行政處分判決時，經原告聲請，並認為適當者，得於判決中命行政機關為回復原狀之必要處置。
+
+* 197 撤銷訴訟，其訴訟標的之行政處分涉及金錢或其他代替物之給付或確認者，行政法院得以確定不同金額之給付或以不同之確認代替之。
+
+* 198 行政法院受理撤銷訴訟，發現原處分或決定雖屬違法，但其撤銷或變更於公益有重大損害，經斟酌原告所受損害、賠償程度、防止方法及其他一切情事，認原處分或決定之撤銷或變更顯與公益相違背時，得駁回原告之訴。前項情形，應於判決主文中諭知原處分或決定違法。
+
+* 199 行政法院為前條判決時，應依原告之聲明，將其因違法處分或決定所受之損害於判決內命被告機關賠償。原告未為前項聲明者，得於前條判決確定後一年內，向高等行政法院訴請賠償。
+
+* 200 行政法院對於人民依第五條規定請求應為行政處分或應為特定內容之行政處分之訴訟，應為左列方式之裁判：一、原告之訴不合法者，應以裁定駁回之。二、原告之訴無理由者，應以判決駁回之。三、原告之訴有理由，且案件事證明確者，應判命行政機關作成原告所申請內容之行政處分。四、原告之訴雖有理由，惟案件事證尚未臻明確或涉及行政機關之行政裁量決定者，應判命行政機關遵照其判決之法律見解對於原告作成決定。
+
+* 201 行政機關依裁量權所為之行政處分，以其作為或不作為逾越權限或濫用權力者為限，行政法院得予撤銷。
+
+* 202 當事人於言詞辯論時為訴訟標的之拾棄或認諾者，以該當事人具有處分權及不涉及公益者為限，行政法院得本於其捨棄或認諾為該當事人敗訴之判決。
+
+* 203 公法上契約成立後，情事變更，非當時所得預料，而依其原有效果顯失公平者，行政法院得依當事人聲請，為增、減給付或變更、消滅其他原有效果之判決。為當事人之行政機關，因防止或免除公益上顯然重大之損害亦得為前項之聲請。前二項規定，於因公法上其他原因發生之財產上給付，準用之。
+
+* 204 經言詞辯論之判決，應宣示之；不經言詞辯論之判決，應公告之。宣示判決應於辯論終結之期日或辯論終結時指定之期日為之。前項指定之宣示期日，自辯論終結時起，不得逾七日。判決經公告者，行政法院書記官應作記載該事由及年、月、日、時之證書附卷。
+
+* 205 宣示判決，不問當事人是否在場，均有效力。判決經宣示後，其主文仍應於當日在行政法院牌示處公告之。判決經宣示或公告後，當事人得不待送達，本於該判決為訴訟行為。
+
+* 206 判決經宣示後，為該判決之行政法院受其羈束；其不宣示者，經公告主文後，亦同。
+
+* 207 經言詞辯論之裁定，應宣示之。終結訴訟之裁定，應公告之。
+
+* 208 裁定經宣示後，為該裁定之行政法院、審判長、受命法官或受託法官受其羈束；不宣示者，經公告或送達後受其羈束。但關於指揮訴訟或別有規定者，不在此限。
+
+* 209 判決應作判決書記載左列各款事項：一、當事人姓名、性別、年齡、身分證明文件字號、住所或居所；當事人為法人、機關或其他團體者，其名稱及所在地、事務所或營業所。二、有法定代理人、代表人、管理人者，其姓名、住所或居所及其與法人、機關或團體之關係。三、有訴訟代理人者，其姓名、住所或居所。四、判決經言詞辯論者，其言詞辯論終結日期。五、主文。六、事實。七、理由。八、年、月、日。九、行政法院。事實項下，應記載言詞辯論時當事人之聲明及所提攻擊或防禦方法之要領。必要時，得以書狀、筆錄或其他文書作為附件。理由項下，應記載關於攻擊或防禦方法之意見及法律上之意見。
+
+* 210 判決，應以正本送達於當事人。前項送達，自行政法院書記官收領判決原本時起，至遲不得逾十日。對於判決得為上訴者，應於送達當事人之正本內告知其期間及提出上訴狀之行政法院。前項告知期間有錯誤時，告知期間較法定期間為短者，以法定期間為準；告知期間較法定期間為長者，應由行政法院書記官於判決正本送達後二十日內，以通知更正之，並自更正通知送達之日起計算法定期間。行政法院未依第三項規定為告知，或告知錯誤未依前項規定更正，致當事人遲誤上訴期間者，視為不應歸責於己之事由，得自判決送達之日起一年內，適用第九十一條之規定，聲請回復原狀。
+
+* 211 不得上訴之判決，不因告知錯誤而受影響。
+
+* 212 判決，於上訴期間屆滿時確定。但於上訴期間內有合法之上訴者，阻其確定。不得上訴之判決，於宣示時確定；不宣示者，於公告主文時確定。
+
+* 213 訴訟標的於確定之終局判決中經裁判者，有確定力。
+
+* 214 確定判決，除當事人外，對於訴訟繫屬後為當事人之繼受人者及為當事人或其繼受人占有請求之標的物者，亦有效力。對於為他人而為原告或被告者之確定判決，對於該他人亦有效力。
+
+* 215 撤銷或變更原處分或決定之判決，對第三人亦有效力。
+
+* 216 撤銷或變更原處分或決定之判決，就其事件有拘束各關係機關之效力。原處分或決定經判決撤銷後，機關須重為處分或決定者，應依判決意旨為之。前二項之規定，於其他訴訟準用之。
+
+* 217 第二百零四條第二項至第四項、第二百零五條及第二百十條之規定，於裁定準用之。
+
+* 218 民事訴訟法第二百二十四條、第二百二十七條、第二百二十八條、第二百三十條、第二百三十二條、第二百三十三條、第二百三十六條、第二百三十七條、第二百四十條、第三百八十五條至第第三百八十八條、第三百九十六條第一項、第二項及第三百九十九條之規定，於本節準用之。
+
+* 219 當事人就訴訟標的具有處分權並不違反公益者，行政法院不問訴訟程度如何，得隨時試行和解。受命法官或受託法官，亦同。第三人經行政法院之許可，得參加和解。行政法院認為必要時，得通知第三人參加。
+
+* 220 因試行和解，得命當事人、法定代理人、代表人或管理人本人到場。
+
+* 221 試行和解而成立者，應作成和解筆錄。第一百二十八條至第一百三十條、民事訴訟法第二百十四條、第二百十五條、第二百十七條至第二百十九條之規定，於前項筆錄準用之。和解筆錄應於和解成立之日起十日內，以正本送達於當事人及參加和解之第三人。
+
+* 222 和解成立者，其效力準用第二百十三條、第二百十四條及第二百十六條之規定。
+
+* 223 和解有無效或得撤銷之原因者，當事人得請求繼續審判。
+
+* 224 請求繼續審判，應於三十日之不變期間內為之。前項期間，自和解成立時起算。但無效或得撤銷之原因知悉在後者，自知悉時起算。和解成立後經過三年者，不得請求繼續審判。但當事人主張代理權有欠缺者，不在此限。
+
+* 225 請求繼續審判不合法者，行政法院應以裁定駁回之。請求繼續審判顯無理由者，得不經言詞辯論，以判決駁回之。
+
+* 226 因請求繼續審判而變更和解內容者，準用第二百八十二條之規定。
+
+* 227 第三人參加和解成立者，得為執行名義。當事人與第三人間之和解，有無效或得撤銷之原因者，得向原行政法院提起宣告和解無效或撤銷和解之訴。前項情形，當事人得請求就原訴訟事件合併裁判。
+
+* 228 第二百二十四條至第二百二十六條之規定，於前條第二項情形準用之。
+
+* 229 左列各款行政訴訟事件，適用本章所定之簡易程序：一、關於稅捐課徵事件涉訟，所核課之稅額在新臺幣三萬元以下者。二、因不服行政機關所為新臺幣三萬元以下罰鍰處分而涉訟者。三、其他關於公法上財產關係之訴訟，其標的之金額或價額在新臺幣三萬元以下者。四、因不服行政機關所為告誡、警告、記點、記次或其他相類之輕微處分而涉訟者。五、依法律之規定應適用簡易訴訟程序者。前項所定數額，司法院得因情勢需要，以命令減為新臺幣二萬元或增至新臺幣二十萬元。
+
+* 230 前條第一項第一款至第三款之訴，因訴之變更，致訴訟標的之金額或價額逾新臺幣三萬元者，其辯論及裁判不得依簡易程序之規定；追加之新訴或反訴，其訴訟標的之金額或價額逾新臺幣三萬元，而以原訴與之合併辯論及裁判者，亦同。
+
+* 231 起訴及其他期日外之聲明或陳述，概得以言詞為之。以言詞起訴者，應將筆錄送達於他造。
+
+* 232 簡易訴訟程序在獨任法官前行之。
+
+* 233 簡易訴訟程序之裁判得不經言詞辯論為之。行言詞辯論者，其言詞辯論期日之通知書，應與訴狀或第二百三十一條第二項之筆錄一併送達於他造。
+
+* 234 判決書內之事實、理由，得不分項記載，並得僅記載其要領。
+
+* 235 對於適用簡易程序之裁判提起上訴或抗告，須經最高行政法院之許可。前項許可，以訴訟事件所涉及之法律見解具有原則性者為限。
+
+* 236 簡易程序除本章別有規定外，仍適用通常訴訟程序之規定。
+
+* 237 民事訴訟法第四百三十條、第四百三十一條及第四百三十三條之規定，於本章準用之。
+
+* 238 對於高等行政法院之終局判決，除法律別有規定外，得上訴於最高行政法院。於上訴審程序，不得為訴之變更、追加或提起反訴。
+
+* 239 前條判決前之裁判，牽涉該判決者，並受最高行政法院之審判。但依本法不得聲明不服或得以抗告聲明不服者，不在此限。
+
+* 240 當事人於高等行政法院判決宣示、公告或送達後，得捨棄上訴權。當事人於宣示判決時，以言詞捨棄上訴權者，應記載於言詞辯論筆錄；如他造不在場，應將筆錄送達。
+
+* 241 提起上訴，應於高等行政法院判決送達後二十日之不變期間內為之。但宣示或公告後送達前之上訴，亦有效力。
+
+* 242 對於高等行政法院判決之上訴，非以其違背法令為理由，不得為之。
+
+* 243 判決不適用法規或適用不當者，為違背法令。有左列各款情形之一者，其判決當然違背法令：一、判決法院之組織不合法者。二、依法律或裁判應迴避之法官參與裁判者。三、行政法院於權限之有無辨別不當或違背專屬管轄之規定者。四、當事人於訴訟未經合法代理或代表者。五、違背言詞辯論公開之規定者。六、判決不備理由或理由矛盾者。
+
+* 244 提起上訴，應以上訴狀表明左列各款事項，提出於原高等行政法院為之：一、當事人。二、高等行政法院判決，及對於該判決上訴之陳述。三、對於高等行政法院判決不服之程度，及應如何廢棄或變更之聲明。四、上訴理由。前項上訴狀內並應添具關於上訴理由之必要證據。對簡易訴訟事件之判決提起上訴，應於上訴理由中具體表明該訴訟事件所涉及之原則性法律見解。
+
+* 245 上訴狀內未表明上訴理由者，上訴人應於提起上訴後二十日內提出理由書於原高等行政法院；未提出者，毋庸命其補正，由原高等行政法院以裁定駁回之。判決宣示或公告後送達前提起上訴者，前項期間應自判決送達後起算。
+
+* 246 上訴不合法而其情形不能補正者，原高等行政法院應以裁定駁回之。上訴不合法而其情形可以補正者，原高等行政法院應定期間命其補正；如不於期間內補正，原高等行政法院應以裁定駁回之。對簡易訴訟事件之判決提起上訴，未於上訴理由中具體表明該訴訟事件所涉及之原則性法律見解者，適用前項之規定。
+
+* 247 上訴未經依前條規定駁回者，高等行政法院應速將上訴狀送達被上訴人。被上訴人得於上訴狀或第二百四十五條第一項理由書送達後十五日內，提出答辯狀於原高等行政法院。高等行政法院送交訴訟卷宗於最高行政法院，應於收到答辯狀或前項期間已滿，及各當事人之上訴期間已滿後為之。前項應送交之卷宗，如為高等行政法院所需者，應自備繕本、影本或節本。
+
+* 248 被上訴人在最高行政法院未判決前得提出答辯狀及其追加書狀於最高行政法院，上訴人亦得提出上訴理由追加書狀。最高行政法院以認為有必要時為限，得將前項書狀送達於他造。
+
+* 249 上訴不合法者，最高行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正。上訴不合法之情形，已經原高等行政法院命其補正而未補正者，得不行前項但書之程序。
+
+* 250 上訴之聲明不得變更或擴張之。
+
+* 251 最高行政法院應於上訴聲明之範圍內調查之。最高行政法院調查高等行政法院判決有無違背法令，不受上訴理由之拘束。
+
+* 252 最高行政法院就其受理事件，對所適用之法律，確信有牴觸憲法之疑義時，得以裁定停止訴訟程序，聲請大法官解釋。
+
+* 253 最高行政法院之判決不經言詞辯論為之。但有左列情形之一者，得依職權或依聲請行言詞辯論：一、法律關係複雜或法律見解紛歧，有以言詞辯明之必要者。二、涉及專門知識或特殊經驗法則，有以言詞說明之必要者。三、涉及公益或影響當事人權利義務重大，有行言詞辯論之必要者。言詞辯論應於上訴聲明之範圍內為之。
+
+* 254 除別有規定外，最高行政法院應以高等行政法院判決確定之事實為判決基礎。以違背訴訟程序之規定為上訴理由時，所舉違背之事實，及以違背法令確定事實或遺漏事實為上訴理由時，所舉之該事實，最高行政法院得斟酌之。依前條第一項但書行言詞辯論所得闡明或補充訴訟關係之資料，最高行政法院亦得斟酌之。
+
+* 255 最高行政法院認上訴為無理由者，應為駁回之判決。原判決依其理由雖屬不當，而依其他理由認為正當者，應以上訴為無理由。
+
+* 256 最高行政法院認上訴為有理由者，就該部分應廢棄原判決。因違背訴訟程序之規定廢棄原判決者，其違背之訴訟程序部分，視為亦經廢棄。
+
+* 257 最高行政法院不得以高等行政法院無管轄權而廢棄原判決。但違背專屬管轄之規定者，不在此限。因高等行政法院無管轄權而廢棄原判決者，應以判決將該事件移送於管轄行政法院。
+
+* 258 除第二百四十三條第二項第一款至第五款之情形外，高等行政法院判決違背法令而不影響裁判之結果者，不得廢棄原判決。
+
+* 259 經廢棄原判決而有左列各款情形之一者，最高行政法院應就該事件自為判決：一、因其於確定之事實或依法得斟酌之事實，不適用法規或適用不當廢棄原判決，而事件已可依該事實為裁判者。二、因事件不屬行政法院之權限，而廢棄原判決者。三、依第二百五十三條第一項行言詞辯論者。
+
+* 260 除別有規定外，經廢棄原判決者，最高行政法院應將該事件發回原高等行政法院或發交其他高等行政法院。前項發回或發交判決，就高等行政法院應調查之事項，應詳予指示。受發回或發交之高等行政法院，應以最高行政法院所為廢棄理由之法律上判斷為其判決基礎。
+
+* 261 為發回或發交之判決者，最高行政法院應速將判決正本附入卷宗，送交受發回或發交之高等行政法院。
+
+* 262 上訴人於終局判決宣示或公告前得將上訴撤回。撤回上訴者，喪失其上訴權。上訴之撤回，應以書狀為之。但在言詞辯論時，得以言詞為之。於言詞辯論時所為上訴之撤回，應記載於言詞辯論筆錄，如他造不在場，應將筆錄送達。
+
+* 263 除本編別有規定外，前編第一章之規定，於上訴審程序準用之。
+
+* 264 對於裁定得為抗告。但別有不許抗告之規定者，不在此限。
+
+* 265 訴訟程序進行中所為之裁定，除別有規定外，不得抗告。
+
+* 266 受命法官或受託法官之裁定，不得抗告。但其裁定如係受訴行政法院所為而依法得為抗告者，得向受訴行政法院提出異議。前項異議，準用對於行政法院同種裁定抗告之規定。受訴行政法院就異議所為之裁定，得依本編之規定抗告。繫屬於最高行政法院之事件，受命法官、受託法官所為之裁定，得向受訴行政法院提出異議。其不得上訴最高行政法院之事件，高等行政法院受命法官、受託法官所為之裁定，亦同。
+
+* 267 抗告，由最高行政法院裁定。
+
+* 268 提起抗告，應於裁定送達後十日之不變期間內為之。但送達前之抗告亦有效力。
+
+* 269 提起抗告，應向為裁定之原高等行政法院或原審判長所屬高等行政法院提出抗告狀為之。高等行政法院適用簡易訴訟程序之事件或關於訴訟救助提起抗告，及由證人、鑑定人或執有證物之第三人提起抗告者，得以言詞為之。
+
+* 270 關於捨棄上訴權及撤回上訴之規定，於抗告準用之。
+
+* 271 依本編規定，應為抗告而誤為異議者，視為已提起抗告；應提出異議而誤為抗告者，視為已提出異議。
+
+* 272 民事訴訟法第四百八十九條至第四百九十二條及第四百九十四條之規定，於本編準用之。
+
+* 273 有左列各款情形之一者，得以再審之訴對於確定終局判決聲明不服。但當事人已依上訴主張其事由或知其事由而不為主張者，不在此限：一、適用法規顯有錯誤者。二、判決理由與主文顯有矛盾者。三、判決法院之組織不合法者。四、依法律或裁判應迴避之法官參與裁判者。五、當事人於訴訟未經合法代理或代表者。六、當事人知他造之住居所，指為所在不明而與涉訟者。但他造已承認其訴訟程序者，不在此限。七、參與裁判之法官關於該訴訟違背職務，犯刑事上之罪者。八、當事人之代理人、代表人、管理人或他造或其他代理人、代表人、管理人關於該訴訟有刑事上應罰之行為，影響於判決者。九、為判決基礎之證物係偽造或變造者。十、證人、鑑定人或通譯就為判決基礎之證言、鑑定或通譯為虛偽陳述者。十一、為判決基礎之民事或刑事判決及其他裁判或行政處分，依其後之確定裁判或行政處分已變更者。十二、當事人發見就同一訴訟標的在前已有確定判決或和解或得使用該判決或和解者。十三、當事人發見未經斟酌之證物或得使用該證物者。但以如經斟酌可受較有利益之裁判者為限。十四、原判決就足以影響於判決之重要證物漏未斟酌者。確定終局判決所適用之法律或命令，經司法院大法官依當事人之聲請解釋為牴觸憲法者，其聲請人亦得提起再審之訴。第一項第七款至第十款情形，以宣告有罪之判決已確定，或其刑事訴訟不能開始或續行非因證據不足者為限，得提起再審之訴。
+
+* 274 為判決基礎之裁判，如有前條所定之情形者，得據以對於該判決提起再審之訴。
+
+* 275 再審之訴專屬為判決之原行政法院管轄。對於審級不同之行政法院就同一事件所為之判決提起再審之訴者，由最高行政法院合併管轄之。對於最高行政法院之判決，本於第二百七十三條第一項第九款至第十四款事由聲明不服者，雖有前二項之情形，仍專屬原高等行政法院管轄。
+
+* 276 再審之訴應於三十日之不變期間內提起。前項期間自判決確定時起算。但再審之理由知悉在後者，自知悉時起算。依第二百七十三條第二項提起再審之訴者，第一項期間自解釋公布當日起算。再審之訴自判決確定時起，如已逾五年者，不得提起。但以第二百七十三條第一項第五款、第六款或第十二款情形為再審之理由者，不在此限。
+
+* 277 再審之訴，應以訴狀表明左列各款事項，並添具確定終局判決繕本，提出於管轄行政法院為之：一、當事人。二、聲明不服之判決及提起再審之訴之陳述。三、應於如何程度廢棄原判決及就本案如何判決之聲明。四、再審理由及關於再審理由並遵守不變期間之證據。再審訴狀內，宜記載準備本案言詞辯論之事項。
+
+* 278 再審之訴不合法者，行政法院應以裁定駁回之。再審之訴顯無再審理由者，得不經言詞辯論，以判決駁回之。
+
+* 279 本案之辯論及裁判，以聲明不服之部分為限。
+
+* 280 再審之訴雖有再審理由，行政法院如認原判決為正當者，應以判決駁回之。
+
+* 281 除本編別有規定外，再審之訴訟程序準用關於各該審級訴訟程序之規定。
+
+* 282 再審之訴之判決，對第三人因信賴確定終局判決以善意取得之權利無影響。但顯於公益有重大妨害者，不在此限。
+
+* 283 裁定已經確定，而有第二百七十三條之情形者，得準用本編之規定，聲請再審。
+
+* 284 因撤銷或變更原處分或決定之判決，而權利受損害之第三人，如非可歸責於己之事由，未參加訴訟，致不能提出足以影響判決結果之攻擊或防禦方法者，得對於確定終局判決聲請重新審理。前項聲請，應於知悉確定判決之日起三十日之不變期間內為之。但自判決確定之日起已逾一年者，不得聲請。
+
+* 285 重新審理之聲請準用第二百七十五條第一項、第二項管轄之規定。
+
+* 286 聲請重新審理，應以聲請狀表明左列各款事項，提出於管轄行政法院為之：一、聲請人及原訴訟之兩造當事人。二、聲請重新審理之事件，及聲請重新審理之陳述。三、就本案應為如何判決之聲明。四、聲請理由及關於聲請理由並遵守不變期間之證據。聲請狀內，宜記載準備本案言詞辯論之事項。
+
+* 287 聲請重新審理不合法者，行政法院應以裁定駁回之。
+
+* 288 行政法院認為第二百八十四條第一項之聲請有理由者，應以裁定命為重新審理；認為無理由者，應以裁定駁回之。
+
+* 289 聲請人於前二條裁定確定前得撤回其聲請。撤回聲請者，喪失其聲請權。聲請之撤回，得以書狀或言詞為之。
+
+* 290 開始重新審理之裁定確定後，應即回復原訴訟程序，依其審級更為審判。聲請人於回復原訴訟程序後，當然參加訴訟。
+
+* 291 聲請重新審理無停止原確定判決執行之效力。但行政法院認有必要時，得命停止執行。
+
+* 292 第二百八十二條之規定於重新審理準用之。
+
+* 293 為保全公法上金錢給付之強制執行，得聲請假扣押。前項聲請，就未到履行期之給付，亦得為之。
+
+* 294 假扣押之聲請，由管轄本案之高等行政法院或假扣押標的所在地之高等行政法院管轄。管轄本案之高等行政法院為訴訟已繫屬或應繫屬之高等行政法院。假扣押之標的如係債權，以債務人住所或擔保之標的所在地，為假扣押標的所在地。
+
+* 295 假扣押裁定後，尚未提起給付之訴者，應於裁定送達十日內提起；逾期未起訴者，行政法院應依聲請撤銷假扣押裁定。
+
+* 296 假扣押裁定因自始不當而撤銷，或因前條及民事訴訟法第五百三十條第三項之規定而撤銷者，債權人應賠償債務人因假扣押或供擔保所受之損害。假扣押所保全之本案請求已起訴者，前項賠償，行政法院於言詞辯論終結前，應依債務人之聲明，於本案判決內命債權人為賠償；債務人未聲明者，應告以得為聲明。
+
+* 297 民事訴訟法第五百二十三條、第五百二十五條至第五百二十八條及第五百三十條之規定，於本編假扣押程序準用之。
+
+* 298 公法上之權利因現狀變更，有不能實現或甚難實現之虞者，為保全強制執行，得聲請假處分。於爭執之公法上法律關係，為防止發生重大之損害或避免急迫之危險而有必要時，得聲請為定暫時狀態之處分。前項處分，得命先為一定之給付。行政法院為假處分裁定前，得訊問當事人、關係人或為其他必要之調查。
+
+* 299 關於行政機關之行政處分，不得為前條之假處分。
+
+* 300 假處分之聲請，由管轄本案之高等行政法院管轄。但有急迫情形時，得由請求標的所在地之高等行政法院管轄。
+
+* 301 關於假處分之請求及原因，非有特別情事，不得命供擔保以代釋明。
+
+* 302 除別有規定外，關於假扣押之規定，於假處分準用之。
+
+* 303 民事訴訟法第五百三十五條及第五百三十六條之規定，於本編假處分程序準用之。
+
+* 304 撤銷判決確定者，關係機關應即為實現判決內容之必要處置。
+
+* 305 行政訴訟之裁判命債務人為一定之給付，經裁判確定後，債務人不為給付者，債權人得以之為執行名義，聲請高等行政法院強制執行。高等行政法院應先定相當期間通知債務人履行；逾期不履行者，強制執行。債務人為中央或地方機關或其他公法人者，並應通知其上級機關督促其如期履行。依本法成立之和解，及其他依本法所為之裁定得為強制執行者，或科處罰鍰之裁定，均得為執行名義。
+
+* 306 高等行政法院為辦理強制執行事務，得設執行處，或囑託普通法院民事執行處或行政機關代為執行。執行程序，除本法別有規定外，應視執行機關為法院或行政機關而分別準用強制執行法或行政執行法之規定。債務人對第一項囑託代為執行之執行名義有異議者，由高等行政法院裁定之。
+
+* 307 債務人異議之訴，由高等行政法院受理；其餘有關強制執行之訴訟，由普通法院受理。
+
+* 308 本法自公布日施行。本法修正條文施行日期，由司法院以命令定之。
 
