法院組織法 1999.1.12

--- a/司法-司法組織/法院組織法.md
+++ b/司法-司法組織/法院組織法.md
@@ -20,7 +20,11 @@
 
 * 11 地方法院或其分院之類別及員額，依附表之規定。各地方法院或其分院應適用之類別及其變更，由司法院定之。
 
-* 12 地方法院置法官，薦任第八職等至第九職等或簡任第十職等至第十一職等。
+> 釋：本條文未修正，配合第十二條條文之修正，修正本條第一項附表相關員額。
+
+* 12 地方法院置法官，薦任第八職等至第九職等或簡任第十職等至第十一職等。司法院得調候補法官至地方法院辦事，承實任法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。地方法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。候補法官調地方法院辦事期間，計入其候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
+
+> 釋：一、第一項不修正。二、為提高裁判品質、增進司法效能、並減輕地方法院實任法官工作負荷，有設助理之必要，乃明文規定地方法院置法官助理及其業務範圍、資格。法官助理之工作與律師所執行之業務，均屬司法實務工作，故明定具律師執業資格者充任法官助理期間計入其律師執業年資。
 
 * 13 地方法院置院長一人，由法官兼任，簡任第十職等至第十二職等，綜理全院行政事務，但直轄市地方法院兼任院長之法官，簡任第十一職等至第十三職等。
 
@@ -64,7 +68,11 @@
 
 * 33 高等法院或其分院之類別及員額，依附表之規定。高等法院或其分院應適用之類別及其變更，由司法院定之。
 
-* 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等。高等法院簡任法官，繼續服務四年以上者，簡任第十二職等至第十四職等。
+> 釋：本條文未修正，配合第三十四條條文之修正，修正本條第一項附表相關員額。
+
+* 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等。高等法院簡任法官，繼續服務四年以上者，簡任第十二職等至第十四職等。司法院得調地方法院試署或候補法官至高等法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。高等法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。試署法官或候補法官調高等法院辦事期間，計入其試署或候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
+
+> 釋：一、第一、二項不修正。二、為提高裁判品質、增進司法效能、並減輕高等法院法官工作負荷，有設助理之必要，故明定於必要時，得聘用各種專業人員充任法官助理。三、試署法官或候補法官充任助理期間之年資應不受影響，故增訂之。四、法官助理之工作與律師所執行之業務，均屬司法實務工作，故增設具律師執業資格者充任法官助理期間計入其律師執業年資。
 
 * 35 高等法院置院長一人，由法官兼任，簡任第十三職等至第十四職等，綜理全院行政事務。
 
@@ -96,9 +104,13 @@
 
 * 49 最高法院員額，依附表之規定。
 
+> 釋：本條文未修正，配合第五十一條條文之修正，修正本條附表相關員額。
+
 * 50 最高法院置院長一人，特任，綜理全院行政事務，並任法官。
 
-* 51 最高法院置法官，簡任第十三職等至第十四職等；分設民事庭、刑事庭，其庭數視事務之繁簡定之；各庭置庭長一人，除由院長兼任者外，餘由法官兼任，簡任第十四職等，監督各該庭事務。
+* 51 最高法院置法官，簡任第十三職等至第十四職等；分設民事庭、刑事庭，其庭數視事務之繁簡定之；各庭置庭長一人，除由院長兼任者外，餘由法官兼任，簡任第十四職等，監督各該庭事務。司法院得調高等法院以下各級法院及其分院法官或候補法官至最高法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。最高法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。法官或候補法官調最高法院辦事期間，計入其法官或候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
+
+> 釋：一、第一項不修正。二、為提高裁判品質、增進司法效能、並減輕最高法院法官工作負荷，有設助理之必要，故明定於必要時，得聘用各種專業人員充任法官助理。三、法官或候補法官充任助理期間之年資應不受影響，爰增訂之。四、法官助理之工作與律師所執行之業務，均屬司法實務工作，故增訂具律師業資格者充任法官助理期間計入律師執業年資。
 
 * 52 最高法院設書記廳，置書記官長一人，簡任第十一職等至第十三職等，承院長之命處理行政事務；書記官，委任第三職等至第五職等或薦任第七職等至第九職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導等事務，並視業務需要分科辦事，各科於必要時，得再分股。各科科長由薦任書記官兼任；股長由委任或薦任書記官兼任，均不另列等。前項薦任書記官員額，不得逾書記官總額二分之一。
 
@@ -130,6 +142,22 @@
 
 * 66 最高法院檢察署檢察總長，特任；主任檢察官，簡任第十四職等；檢察官，簡任第十三職等至第十四職等。高等法院檢察署檢察長，簡任第十三職等至第十四職等；其分院檢察署檢察長，簡任第十二職等至第十四職等。高等法院及分院檢察署主任檢察官，簡任第十一職等至第十三職等；檢察官，簡任第十職等至第十一職等或薦任第九職等；其簡任檢察官繼續服務四年以上者，簡任第十二職等至第十四職等。地方法院及分院檢察署檢察長，簡任第十職等至第十二職等；主任檢察官，簡任第十職等至第十一職等或薦任第九職等；檢察官，薦任第八職等至第九職等或簡任第十職等至第十一職等。但直轄市地方法院檢察署檢察長，簡任第十一職等至第十三職等。曾任高等法院或其分院檢察署檢察官四年以上具簡任資格，調地方法院或其分院檢察署檢察長、主任檢察官、檢察官者，簡任第十二職等至第十四職等。
 
+* 66.1 法務部得調高等法院以下各級法院及其分院檢察署檢察官或候補檢察官至最高法院檢察署辦事，承檢察官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集及書類之草擬等事項。法務部得調地方法院及其分院檢察署試署檢察官或候補檢察官至高等法院或其分院檢察署辦事，承檢察官之命，協助檢察官辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集及書類之草擬等事項。法務部得調候補檢察官至地方法院或其分院檢察署辦事，承實任檢察官之命，協助檢察官辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集及書類之草擬等事項。檢察官、試署檢察官或候補檢察官依前三項規定調辦事期間，計入其檢察官、試署檢察官或候補檢察官年資。
+
+> 釋：一、本條係新增。二、為加強對判決之監督，提高辦案品質，減輕各級法院檢察署檢察官之工作負荷，爰增訂本條，法務部得調高等法院以下各級法院及分院檢察署檢察官或候補檢察官至最高法院、調地方法院及其分院檢察署試署檢察官或候補檢察官至高等法院及分院、調候補檢察官至地院或其分院檢察署辦事。
+
+* 66.2 各級法院及其分院檢察署設檢察事務官室，置檢察事務官，薦任第七職等至第九職等；檢察事務官在二人以上者，置主任檢察事務官，薦任第九職等或簡任第十職等；並得視業務需要分組辦事，各組組長由檢察事務官兼任，不另列等。
+
+> 釋：一、本條係新增。二、為使檢察事務官之業務順利推展，明訂各級法院或其分院檢察署設檢察事務官室，置檢察事務官，檢察事務官在二人以上者，置主任檢察事務官，並分別明訂其職掌、官等及職等。三、在規模較大之檢察署，檢察事務官人力較為充沛，為便依其專精分配事務，爰規定得視業務需要分組辦事。
+
+* 66.3 檢察事務官受檢察官之指揮，處理下列事務：一、實施搜索、扣押、勘驗或執行拘提。二、詢問告訴人、告發人、被告、證人或鑑定人。三、襄助檢察官執行其他第六十條所定之職權。檢察事務官處理前項前二款事務，視為刑事訴訟法第二百三十條第一項之司法警察官。
+
+> 釋：一、本條係新增。二、按設置檢察事務官之目的，在襄助檢察官執行法院組織法第六十條所定職權，其中又以實施偵查之工作量最為繁重，為發揮檢察事務官之功能，使檢察事務官亦得襄助此等偵查事務之執行，爰增訂之。
+
+* 66.4 檢察事務官，應就具有下列資格之一者任用之：一、經公務人員高等考試或司法人員特種考試相當等級之檢察事務官考試及格者。二、經律師考試及格，並具有薦任職任用資格者。三、曾任警察官或法務部調查局調查人員三年以上，成績優良，並具有薦任職任用資格者。四、具有公立或經立案之私立大學、獨立學院以上學歷，曾任法院或檢察署書記官，辦理民刑事紀錄三年以上，成績優良，具有薦任職任用資格者。主任檢察事務官，應就具有檢察事務官及擬任職等任用資格，並具有領導才能者遴任之。具律師執業資格者任檢察事務官期間，計入其律師執業年資。
+
+> 釋：一、本條係新增。二、配合前二條增置之檢察事務官，明定其任用資格。
+
 * 67 地方法院及分院檢察署設觀護人室，置觀護人，觀護人在二人以上者，置主任觀護人。觀護人，薦任第七職等至第九職等；主任觀護人，薦任第九職等或簡任第十職等。
 
 * 68 高等法院以下各級法院及其分院檢察署，置法醫師，法醫師在二人以上者，置主任法醫師。法醫師，薦任第七職等至第九職等；主任法醫師，薦任第九職等或簡任第十職等。但地方法院及其分院檢察署法醫師得列委任第五職等。高等法院以下各級法院及其分院檢察署，置檢驗員，委任第三職等至第五職等或薦任第六職等至第八職等。
@@ -144,9 +172,15 @@
 
 * 73 地方法院或其分院檢察署之類別及員額，依附表之規定。各地方法院或其分院檢察署應適用之類別及其變更，由行政院定之。
 
+> 釋：本條文未修正，配合第六十六條之一、第六十六條之二之增訂，修正本條第一項附表相關員額。
+
 * 74 高等法院或其分院檢察署之類別及員額，依附表之規定。高等法院或其分院檢察署應適用之類別及其變更，由行政院定之。
 
+> 釋：本條文未修正，配合第六十六條之一之增訂，修正本條第一項附表相關員額。
+
 * 75 最高法院檢察署員額，依附表之規定。
+
+> 釋：本條文未修正，配合第六十六條之一之增訂，修正本條附表相關員額。
 
 * 76 檢察官得調度司法警察，法官於辦理刑事案件時，亦同。調度司法警察條例另定之。
 
