--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -216,9 +216,9 @@
 
 > 釋：明定法官、檢察官應即時訊問因拘提或逮捕到場之被告或犯罪嫌疑人。並規定檢察官聲請法院羈押等程序。
 
-* 93.1 第九十一條及前條第二項所定之二十四小時，有左列情形之一者，其經過之時間不予計入。但不得有不必要之遲延：一、因交通障礙或其他不可抗力事由所生不得已之遲滯。二、在途解送時間。三、依第一百條之二第一項規定不得為詢問者。四、因被告或犯罪嫌疑人身體健康突發之事由，事實上不能訊問者。五、被告或犯罪嫌疑人表示已選任辯護人，因等候其辯護人到場致未予訊問者。但等候時間不得逾四小時。六、被告或犯罪嫌疑人須由通譯傳譯，因等候其通譯到場致未予訊問者。但等候時間不得逾六小時。七、經檢察官命具保或責付之被告，在候保或候責付中者。但候保或候責付時間不得逾四小時。八、犯罪嫌疑人經法院提審之期間。前項各款情形之經過時間內不得訊問。因第一項之法定障礙事由致二十四小時內無法移送該管法院者，檢察官聲請羈押時，並應釋明其事由。
+* 93.1 第九十一條及前條第二項所定之二十四小時，有左列情形之一者，其經過之時間不予計入。但不得有不必要之遲延：一、因交通障礙或其他不可抗力事由所生不得已之遲滯。二、在途解送時間。三、依第一百條之三第一項規定不得為詢問者。四、因被告或犯罪嫌疑人身體健康突發之事由，事實上不能訊問者。五、被告或犯罪嫌疑人表示已選任辯護人，因等候其辯護人到場致未予訊問者。但等候時間不得逾四小時。其因智能障礙無法為完全之陳述，因等候第三十五條第三項經通知陪同在場之人到場致未予訊問者，亦同。六、被告或犯罪嫌疑人須由通譯傳譯，因等候其通譯到場致未予訊問者。但等候時間不得逾六小時。七、經檢察官命具保或責付之被告，在候保或候責付中者。但候保或候責付時間不得逾四小時。八、犯罪嫌疑人經法院提審之期間。前項各款情形之經過時間內不得訊問。因第一項之法定障礙事由致二十四小時內無法移送該管法院者，檢察官聲請羈押時，並應釋明其事由。
 
-> 釋：一、本條新增。二、按憲法第八條第二項所謂至遲於二十四小時內移送之「二十四小時」，係指客觀上得為偵審之進行者而言，遇有法定障礙事由者，不應予以計入，惟現行法並無相關法定障礙事由之規定，實有訂定明文之必要。
+> 釋：一、八十六年十二月十九日立法院三讀通過條文，已將第一百條之二列移修正為第一百條之三，爰配合修正。二、第三十五條第三項已修正增列：「被告或犯罪嫌疑人因智能障礙無法為完全之陳述者，應有第一項得為輔佐人之人或其委任之人或主管機關指派之社工人員為輔佐陪同在場。」依此規定，偵查機關即有義務等候本條所列之人到場，如不能將其等候時間列為法定障礙事由，顯不合理，爰修正增列於第一項第五款。
 
 * 94 訊問被告，應先詢其姓名、年齡、籍貫、職業、住、居所，以查驗其人有無錯誤，如係錯誤應即釋放。
 
@@ -388,9 +388,9 @@
 
 * 145 司法警察或司法警察官執行搜索及扣押，應以搜索票示第一百四十八條在場之人。
 
-* 146 有人住居或看守之住宅或其他處所，不得於夜間入內搜索或扣押。但經住居人、看守人或可為其代表之人承諾或有急迫之情形者，不在此限。於夜間搜索或扣押者，應記明其事由於筆錄。日間已開始搜索或扣押者，得繼續至夜間。第一百條之二第三項之規定，於夜間搜索或扣押準用之。
+* 146 有人住居或看守之住宅或其他處所，不得於夜間入內搜索或扣押。但經住居人、看守人或可為其代表之人承諾或有急迫之情形者，不在此限。於夜間搜索或扣押者，應記明其事由於筆錄。日間已開始搜索或扣押者，得繼續至夜間。第一百條之三第三項之規定，於夜間搜索或扣押準用之。
 
-> 釋：一、為配合增訂第一百條之二第二項，將本條第四項改為準用之體例。二、第一項至第三項均不修正。
+> 釋：八十六年十二月十九日立法院三讀通過條文，已將第一百條之二列移修正為第一百條之三，爰配合修正。
 
 * 147 左列處所，夜間亦得入內搜索或扣押：一、假釋人住居或使用者。二、旅店、飲食店或其他於夜間公眾可以出入之處所，仍在公開時間內者。三、常用為賭博或妨害風化之行為者。
 
