中華民國刑法 1999.1.14

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -714,13 +714,17 @@
 
 > 釋：以不正方法將虛偽資料或不正指令輸入電腦或其相關設備，為電腦犯罪型態，為適應社會發展需要，爰增列處罰專條。
 
-* 340 以犯前條之罪為常業者，處一年以上、七年以下有期徒刑，得併科五千元以下罰金。
+* 340 以犯第三百三十九條之罪為常業者，處一年以上七年以下有期徒刑，得併科五萬元以下罰金。
+
+> 釋：一、為求前後條文規定之衡平，爰將本條「犯前條之罪」修正為「犯第三百三十九條之罪」。二、原條文罰金刑定係民國二十四年所制定，該「五千元」罰金數額，衡諸當前經濟情況，顯屬過低，爰以提高。
 
 * 341 意圖為自己或第三人不法之所有，乘未滿二十歲人之知慮淺薄或乘人之精神耗弱，使之將本人或第三人之物交付者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。以前項方法得財產上不法之利益或使第三人得之者亦同。前二項之未遂犯罰之。
 
 * 342 為他人處理事務，意圖為自己或第三人不法之利益，或損害本人之利益，而為違背其任務之行為，致生損害於本人之財產或其他利益者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。前項之未遂犯罰之。
 
-* 343 第三百二十三條及第三百二十四條之規定，於前四條之罪準用之。
+* 343 第三百二十三條及第三百二十四條之規定，於前七條之罪，準用之。
+
+> 釋：第三百四十三條所謂「前四條之罪」於上開修正條文施行後，係指第三百三十九條之三至第三百四十二條等四條之罪，惟第三百三十九條至第三百三十九條之二等三條之罪，亦有準用第三百二十三條及第三百二十四條之必要，爰將第三百四十三條條文「前四條之罪」修正為「前七條之罪」。
 
 * 344 乘他人急迫、輕率或無經驗，貸以金錢或其他物品，而取得與原本顯不相當之重利者，處一年以下有期徒刑、拘役或科或併科一千元以下罰金。
 
