非訟事件法 1999.1.15

--- a/司法-民事/非訟事件法.md
+++ b/司法-民事/非訟事件法.md
@@ -152,6 +152,50 @@
 
 * 71 民法第八百七十三條所定抵押權人聲請拍賣抵押物事件，由拍賣物所在地法院管轄。拍賣之抵押物，如為未經辦理繼承登記之不動產，執行法院應囑託地政機關辦理繼承登記後拍賣之。
 
+* 71.1 民法第一千零五十五條所定夫妻離婚有關對於未成年子女權利義務之行使或負擔之酌定、改定或變更事件，由未成年子女住所或居所地之地方法院管轄。未成年子女有數人，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權。第一項之事件有理由時，程序費用由未成年子女之父母或父母之一方負擔。
+
+> 釋：一、本條新增。二、第一項管轄法院之規定，由未成年子女住所地之地方法院管轄。三、第二項規定各該住所地之地方法院俱有管轄權。四、第三項就法院認事件為有理由時，其程序費用之負擔，設特別規定。
+
+* 71.10 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，已繫屬於法院者，法院應將第七十一條之一及前條所定之事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。前項裁定不得聲明不服。
+
+> 釋：一、本條新增。二、夫妻已提起婚姻無效、撤銷婚姻、確認婚姻成立不成立、離婚、履行同居之訴時，如嚴格限制須俟婚姻事件確定後，再依非訟程序處理，非但增加當事人及法院之勞費，亦使法院及當事人無法於婚姻事件中，併就未成年子女之權利義務為通盤考量，爰增訂本條。
+
+* 71.11 民法第一千零八十九條第二項所定父母對於未成年子女重大事項之行使酌定事件，由未成年子女之住所或居所地之地方法院管轄。未成年子女有數人，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權。
+
+> 釋：一、本條新增。二、民法第一千零八十九條第二項，規定「父母對於未成年子女重大事項權利之行使意思不一致時，得請求法院依子女之最佳利益酌定之。」此為新增之非訟事件，爰配合增設本條，規定其管轄法院。
+
+* 71.2 子女為滿七歲以上之未成年人者，於前條第一項事件，有非訟能力。
+
+> 釋：一、本條新增。二、參酌民事訴訟法第五百八十四條、第五百九十六條第二項之立法例，例外規定滿七歲以上之未成年人於前條第一項事件，有非訟能力。
+
+* 71.3 關於第七十一條之一第一項事件，法院為裁定前，得依聲請命為必要之保全處分。前項裁定，不得抗告。第一項保全處分，準用民事訴訟法保全程序之規定。
+
+> 釋：一、本條新增。二、法院得依聲請命為必要之保全處分，以維護未成年子女之利益。三、第二項增訂準用民事訴訟法保全程序之規定，俾保全處分之體例完整，並求立法簡明，避免重複規定。
+
+* 71.4 法院為審酌子女之最佳利益，得徵詢主管機關或社會福利機構之意見或請其進行訪視，就民法第一千零五十五條之一所定事項，為事實之調查，並提出調查報告及建議。法院認為必要時，亦得命少年調查官為前項之調查。
+
+> 釋：一、本條新增。二、擴張少年調查官之職權，使亦得為民法第一千零五十五條之一規定事項之調查，將有助於本事件審前調查程序之落實。
+
+* 71.5 法院認為必要時，得通知主管機關或社會福利機構相關人員或少年調查官於期日到場陳述意見。
+
+> 釋：一、本條新增。二、兒童及少年福利主管機關及福利機構，對於未成年人之保護有專業之知識及經驗，徵詢或囑託其為審前調查，應可收事半功倍之效，爰增訂本條。
+
+* 71.6 法院依民法第一千零五十五條之規定，為酌定、改定或變更時，得命交付子女、未行使或負擔權利義務之一方與未成年子女會面交往之方式與期間、給付扶養費、交付身分證明文件或其他財物，或命為相當之處分，並得訂定必要事項。前項扶養費之給付，法院得依聲請或依職權，命為一次給付或分期給付。分期給付遲誤一期履行者，其後之期間視為亦已到期。第一項裁定得為執行名義。
+
+> 釋：一、本條新增。二、法院依民法第一千零五十五條之規定為裁定時，應以未成年子女之利益為依歸。此裁定因子女之實際需要及父母之負擔能力而異，其內容富多樣性。並規定法院得為其他相當之處分，以免遺漏。
+
+* 71.7 子女為滿七歲以上之未成年人者，法院就前條事件為裁定前，應聽取其意見。但有礙難情形或恐有害其健康者，不在此限。
+
+> 釋：一、本條新增。二、未滿二十歲之未成年人，其辨別事理之能力因年齡長幼而有極大之差異，故七歲以下之未成年人客觀上即難期待其為適當之陳述，爰參酌民事訴訟法第五百八十四條、第五百九十六條第二項之親子事件，特別規定滿七歲之未成年人即有訴訟能力。
+
+* 71.8 第七十一條之六事件處理中，夫妻雙方對該事件達成協議，而其協議符合子女最佳利益時，法院應將其協議內容記載於筆錄。前項記載於筆錄之協議，應於十日內將正本送達於當事人及利害關係人。第一項記載於筆錄之協議得為執行名義。
+
+> 釋：一、本條新增。二、父母對於未成年子女權利義務之行使或負擔，除有不利於子女之情形外，應尊重父母之協議。爰增訂第一項。三、夫妻既已達成協議，內容又符合子女之最佳利益，且經載明於筆錄，宜賦予該筆錄執行力，以避免另起爭端，有害子女生活安定及身心發展，爰增訂第二項。
+
+* 71.9 第七十一條之一至前條之規定，於婚姻無效或撤銷、確認婚姻不成立，與法院宣告停止親權、監護權，及非婚生子女經認領時，有關對於未成年子女權利義務之行使負擔事件，準用之。
+
+> 釋：一、本條新增。二、為因應各種情況之需要，以保護未成年子女，爰增訂本條。
+
 * 72 未成年人無民法第一千零九十四條監護人時，得由利害關係人聲請法院指定之。前項聲請指定事件，由未成年人住所地之法院管轄。
 
 * 73 民法第一千一百十一條第二項監護人之選定事件，由禁治產人住所地之法院管轄。
