--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -454,7 +454,9 @@
 
 * 222 法院為判決時，應斟酌全辯論意旨及調查證據之結果，依自由心證判斷事實之真偽。但別有規定者，不在此限。得心證之理由，應記明於判決。
 
-* 223 判決，應宣示之。但不經言詞辯論之判決，不在此限。宣示判決，應於辯論終結之期日或辯論終結時指定之期日為之。前項指定之宣示期日，自辯論終結時起，不得逾五日。
+* 223 判決，應宣示之。但不經言詞辯論之判決，不在此限。宣示判決，應於辯論終結之期日或辯論終結時指定之期日為之。前項指定之宣示期日，自辯論終結時起，不得逾二星期。前項判決之宣布，應本於已作成之判決原本為之。
+
+> 釋：一、第一、二項不修正。二、為解除實際上之困擾，使法院書記官有充裕時間整理言詞辯論筆錄，爰將第三項所定宣示判決之期間修正為二星期。三、為提高判決之正確性，防止判決原本製作遲延，並貫徹言詞審理主義之精神，避免判決宣示後製作原本，法官因時間經過已遺忘言詞辯論細節之流弊，爰增訂第四項。
 
 * 224 宣示判決，應朗讀主文。判決理由如認為須告知者，應朗讀或口述其要領。
 
@@ -464,7 +466,9 @@
 
 * 227 為判決之推事，應於判決書內簽名；推事中有因故不能簽名者，由審判長附記其事由；審判長因故不能簽名者，由資深陪席推事附記之。
 
-* 228 判決原本，應自宣示判決之日起，於五日內交付法院書記官。書記官應於判決原本內，記明收領期日並簽名。
+* 228 判決原本，應於判決宣示後，當日交付法院書記官；其於辯論終結之期日宣示判決者，應於五日內交付之。書記官應於判決原本內，記明收領期日並簽名。
+
+> 釋：一、為配合第二百二十三條第四項之修正，並為爭取時效，俾早日作成判決正本，送達當事人，爰修正第一項。二、第二項不修正。
 
 * 229 判決，應以正本送達於當事人。前項送達，自法院書記官收領判決原本時起，至遲不得逾十日。對於判決得上訴者，應於送達當事人之正本內，記載其期間及提出上訴狀之法院。
 
@@ -822,81 +826,143 @@
 
 * 402 外國法院之確定判決，有左列各款情形之一者，不認其效力：一、依中華民國之法律，外國法院無管轄權者。二、敗訴之一造，為中華民國人而未應訴者。但開始訴訟所需之通知或命令已在該國送達本人，或依中華民國法律上之協助送達者，不在此限。三、外國法院之判決，有背公共秩序或善良風俗者。四、無國際相互之承認者。
 
-* 403 第四百二十七條第一項及第二項所定之訴訟，於起訴前，應經法院調解。但有左列各款情形之一者，不在此限：一、依法律關係之性質、當事人之狀況或其他情事可認為不能調解或調解顯無成立之望者。二、經法定其他調解機關調解未成立者。三、因票據涉訟者。四、係提起反訴者。五、送達於他造之通知書，應為公示送達或於外國為送達者。
+* 403 下列事件，除有第四百零六條第一項各款所定情形之一者外，於起訴前，應經法院調解：一、不動產所有人或地上權人或其他利用不動產之人相互間因相鄰關係發生爭執者。二、因定不動產之界線或設置界標發生爭執者。三、不動產共有人間因共有物之管理、處分或分割發生爭執者。四、建築物區分所有人或利用人相互間因建築物或其共同部分之管理發生爭執者。五、因增加或減免不動產之租金或地租發生爭執者。六、因定地上權之期間、範圍、地租發生爭執者。七、因道路交通事故或醫療糾紛發生爭執者。八、雇用人與受雇人間因僱傭契約發生爭執者。九、合夥人間或隱名合夥人與出名營業人間因合夥發生爭執者。十、配偶、直系親屬、四親等內之旁系血親、三親等內之旁系姻親、家長或家屬相互間因財產權發生爭執者。十一、其他因財產權發生爭執，其標的之金額或價額在新臺幣十萬元以下者。前項第十一款所定數額，司法院得因情勢需要，以命令減至新臺幣五萬元或增至十五萬元。
 
-> 釋：一、第一項但書第五款之「被告」修正為「他造」，以免誤認調解事件為訴訟事件，並與以後條文用語一致。二、曾經調解而不成立時，縱再強制調解，亦難期成立，故刪除原條文第二項。
+> 釋：現行條文所定起訴前應強制調解之事件，係逕以簡易事件為其決定標準，而未充份考量其事件性質多樣性或當事人間之關係如何，實有礙於調解功能之積極發揮，且未能分擔民事糾紛解決之途，尚欠允洽。爰加以修正之。
 
-* 404 不合於前條規定之訴訟，當事人亦得於起訴前，聲請調解。有適用簡易程序之合意，而當事人逕行起訴者，經他造抗辯後，視其起訴為調解之聲請。
+* 404 不合於前條規定之事件，當事人亦得於起訴前，聲請調解。有起訴前應先經法院調解之合意，而當事人逕行起訴者，經他造抗辯後，視其起訴為調解之聲請。但已為本案之言詞辯論者，不得再為抗辯。
 
-* 405 調解，依當事人之聲請行之。前項聲請，應表明為調解標的之法律關係及爭議之情形。聲請調解之管轄法院，準用第一編第一章第一節之規定。
+> 釋：一、調解為起訴前之程序，爰將第一項之「訴訟」修正為「事件」，以期周延。二、強制調解事件已非以簡易訴訟程序事件為其決定標準，爰將第二項首句，修正為「有起訴前應先經法院調解之合意」，以資配合。又為求訴訟程序安定，當事人之抗辯應於本案言詞辯論前為之，其已為本案言詞辯論後始行抗辯者，即不得再視其起訴為調解之聲請，爰增訂但書規定。
 
-* 406 法院認調解之聲請有第四百零三條但書各款所定情形之一者，得逕以裁定駁回之。前項裁定，不得聲明不服。
+* 405 調解，依當事人之聲請行之。前項聲請，應表明為調解標的之法律關係及爭議之情形。有文書為證據者，並應提出其原本或影本。聲請調解之管轄法院，準用第一編第一章第一節之規定。
 
-> 釋：第四百零三條第二項已刪除，爰將「第四百零三條第一項但書」修正為「第四百零三條但書」。
+> 釋：一、第一項不修正。二、為使法院能迅速瞭解事實真相及兩造爭議之關鍵，爰於第二項增訂聲請人「有文書為證據者，並應提出其原本或影本」之規定。三、第三項不修正。
 
-* 407 法院除駁回調解之聲請外，應速定調解期日，將聲請書狀或言詞聲請之筆錄與期日之通知書，於調解期日前，一併送達於他造。第四百十一條第一項之規定，應於前項通知書內記載之。第四百三十二條之規定，於調解程序準用之。
+* 406 法院認調解之聲請有下列各款情形之一者，得逕以裁定駁回之：一、依法律關係之性質、當事人之狀況或其他情事可認為不能調解或顯無調解必要或調解顯無成立之望者。二、經其他法定調解機關調解未成立者。三、因票據發生爭執者。四、係提起反訴者。五、送達於他造之通知書，應為公示送達或於外國為送達者。前項裁定，不得聲明不服。
 
-* 408 法院於必要時，得命當事人或法定代理人本人於調解期日到場。
+> 釋：一、原第四百零三條第一項但書各款，移列於第一項規定。二、當事人對於聲請調解之標的顯無爭執或有其他情形足認其為虛偽者，法院自無予以調解之必要。爰增列「顯無調解必要」，以求周延。三、第三款「涉訟」修正為「發生爭執」。四、第二、四、五款不修正。五、第二項不修正。
 
-* 409 當事人無正當理由不於調解期日到場者，法院得以裁定科一千元以下之罰鍰；其有代理人到場而本人無正當理由不從前條之命者亦同。前項裁定得為抗告，抗告中應停止執行。
+* 406.1 調解程序，由簡易庭法官行之。調解由法官選任調解委員一人至三人先行調解，俟至相當程度有成立之望或其他必要情形時，再報請法官到場。但兩造當事人合意或法官認為適當時，亦得逕由法官行之。當事人對於前項調解委員人選有異議或兩造合意選任其他適當之人者，法官得另行選任或依其合意選任之。
 
-> 釋：為強化調解，發揮其疏減訟源之功能，有強制當事人到場之必要，而原定條文對不到場當事人之處罰太輕，難收強制到場之效，爰提高罰鍰為一千元。
+> 釋：一、本條係新增。二、為擴大法院調解功能，辦理調解事件之法院應儘可能普及深入民間，以便利當事人使用調解制度，爰增訂第一項，明定調解事件由簡易庭法官辦理。三、第二項係將第四百十一條第一、二項修正後移列。四、調解委員調解能否成功，繫乎當事人對於調解委員之信賴程度，如當事人對於法官選任之調解委員人選有異議，或兩造合意選任其他適當之人者，法院自宜另行選任或依其合意選任之。爰增訂第三項規定。
 
-* 410 調解程序由調解推事於法院行之，於必要時，亦得於其他適當處所行之。前項調解，不用開庭之形式，得不公開。
+* 406.2 地方法院應將其管轄區域內適於為調解委員之人選列冊，以供選任；其人數、資格、任期及其聘任、解任等事項，由司法院定之。法官於調解事件認有必要時，亦得選任前項名冊以外之人為調解委員。
 
-> 釋：一、本條於原文「法院」下增入「於必要時，亦得於其他適當處所行之」，俾與本法第一百五十七條意旨一致。二、本條原條文後段移列為第二項。
+> 釋：一、本條係新增。二、為便利法官選任調解委員，落實調解委員制度，爰於第一項規定地方法院應將其管轄區域內適於為調解委員之人選列冊，以供選任。又有關調解委員人數、資格、任期及聘任、解任等事項，所涉細節極為繁瑣，無從於本法詳為規定，爰授權由司法院定之。三、前項名冊旨在便利法官選任調解委員，法官於調解事件認有必要時，亦得不受其拘束而選任名冊以外之人為調解委員。爰於第二項明定之，俾資適用。
 
-* 411 當事人兩造各得推舉一人至三人為調解人，於期日到場，協同調解。兩造之調解人應為同數。不問當事人有無推舉調解人，如法院認有第三人適於協同調解時，得選任為調解人。第三百二十三條之規定，於前項調解人準用之。法院選任之調解人，應通知其於期日到場；當事人推舉之調解人，經預行陳明法院者亦同。
+* 407 調解期日，由法官依職權定之，其續行之調解期日，得委由主任調解委員定之；無主任調解委員者，得委由調解委員定之。第一百五十六條、第一百五十九條之規定，於法官定調解期日準用之。聲請書狀或言詞聲請之筆錄應與調解期日之通知書，一併送達於他造。前項通知書，應記載不到場時之法定效果。
 
-* 412 就調解事件有利害關係之第三人，經法院之許可，得參加於調解程序；法院並得將事件通知之，命其參加。
+> 釋：一、調解期日之指定，應由法官依職權定之，惟為求調解程序之便捷，法官得將續行之調解期日委由主任調解委員定之。爰將第一項修正之。二、原第四百十一條第一項所定當事人推舉調解人之制度業經變更，原第二項規定已無留存必要；又第一百五十六條有關審判長定期日後之通知規定，第一百五十九條有關審判長得裁定變更或延展期日之規定，於法官定調解期日之情形，應得準用之。爰將第二項予以修正。三、調解程序已修正由法官逐件選任調解委員行之，第四百三十二條之規定已無準用餘地，爰將原條文第三項刪除。四、增訂第四項，規定調解期日通知書應記載不到場時之法定效果，以促注意。
 
-* 413 行調解時，應審究事件關係及兩造爭議之所在，於必要時得調查證據。
+* 407.1 調解委員行調解時，由調解委員指揮其程序，調解委員有二人以上時，由法官指定其中一人為主任調解委員指揮之。
 
-* 414 調解推事應本和平懇切之態度，對當事人兩造為適當之勸導，並徵詢調解人之意見，就調解事件，酌擬平允辦法，力謀雙方之協和。
+> 釋：一、本條係新增。二、第四百零六條之一已規定調解先由調解委員行之，為期其程序進行順暢，於法官到場前，應賦予調解委員程序指揮權，調解委員有二人以上時，並應由法官指定其中一人行之。爰予增訂。
 
-* 415 推事行調解時，得暫行退席，囑付調解人先行勸解，將其結果由調解人報告推事，推事接受報告後，應即出席調解。
+* 408 法官於必要時，得命當事人或法定代理人本人於調解期日到場；調解委員認有必要時，亦得報請法官行之。
 
-* 416 調解經當事人合意而成立；調解成立者，與訴訟上和解有同一之效力。調解有無效或得撤銷之原因者，當事人得向原法院提起宣告調解無效或撤銷調解之訴。前項情形，原調解事件之聲請人，得就原調解事件合併起訴或提起反訴，請求法院於宣告調解無效或撤銷調解時，合併裁判之。第五百條、第五百零二條及第五百零六條之規定，於第二項情形準用之。調解不成立者，法院應付與當事人證明書。
+> 釋：將「法院」修正為「法官」，俾資明確，並增訂「調解委員認有必要時，亦得報請法官行之。」以利適用。
 
-> 釋：一、原條文第三項欠明確，而提起宣告調解無效或撤銷調解之訴之原告，如為原調解事件之聲請人者，自得合併起訴；如為原調解事件之相對人者，則原聲請人可於其程序中提起反訴，以便一次解決糾紛，符合訴訟經濟之原則，爰將本條第三項修正。二、提起調解無效或撤銷調解之訴，猶如對於確定判決之提起再審之訴，有關再審之規定自有準用之餘地。原條文第四項僅定準用第五百條及第五百零二條尚有未足，爰增訂準用第五百零六條，以保護善意第三人之權益。
+* 409 當事人無正當理由不於調解期日到場者，法院得以裁定處新臺幣三千元以下之罰鍰；其有代理人到場而本人無正當理由不從前條之命者亦同。前項裁定得為抗告，抗告中應停止執行。
 
-* 417 關於財產權爭議之調解，當事人不能合意但已甚接近者，調解推事應斟酌一切情形，其有調解人者，並應徵詢調解人之意見，求兩造利益之平衡，於不違反兩造當事人之主要意思範圍內，以職權提出解決事件之方案。前項方案，應送達於當事人及參加調解之利害關係人。
+> 釋：一、第一項「科一千元」修正為「處新臺幣三千元」。二、第二項不修正。
 
-> 釋：一、本條原係參考民法第一百五十三條第二項及日本民事調停法第十七條之規定所增訂，以加強調解制度。惟實務上鮮少運用，致功效未著，爰將原條文「得」字修正為「應」字；並仿日本公害紛爭處理法第三十四條規定，將「裁定」改為「方案」，以發揮調解制度之功能。二、為使當事人等對調解方案得以提出異議，爰增設第二項規定，調解方案應送達於當事人及參加調解之利害關係人。
+* 409.1 為達成調解目的之必要，法院得依當事人之聲請，禁止他造變更現狀、處分標的物，或命為其他一定行為或不行為；於必要時，得命聲請人供擔保後行之。關於前項聲請之裁定，不得抗告。法院為第一項處置前，應使當事人有陳述意見之機會。但法院認為不適當或經通知而不為陳述者，不在此限。第一項之處置，不得作為執行名義，並於調解事件終結時失其效力。當事人無正當理由不從第一項處置之命者，法院得以裁定處新臺幣三萬元以下之罰鍰。前項裁定得為抗告，抗告中應停止執行。
+
+> 釋：一、本條係新增。二、規定法院為達成調解目的之必要，得依當事人之聲請，命他造為一定行為或不行為。此項處置不得作為執行名義，並於調解事件終結時失其效力，惟當事人如無正當理由不從處置之命者，法院得裁處新臺幣三萬元以下之罰鍰。
+
+* 410 調解程序於法院行之，於必要時，亦得於其他適當處所行之。調解委員於其他適當處所行調解者，應經法官之許可。前項調解，得不公開。
+
+> 釋：一、第四百零六條之一第一項已規定調解由簡易庭法官行之，爰配合將第一項「由調解推事」五字刪除，並增訂「調解委員於其他適當處所行調解者，應經法官之許可」之規定，以保障當事人權益。二、調解程序當然不用開庭之形式，爰將第二項「不用開庭之形式」七字刪除，以期簡潔。
+
+* 410.1 調解委員認調解有第四百零六條第一項各款所定情形之一者，報請法官處理之。
+
+> 釋：一、本條係新增。二、調解委員認調解事件有第四百零六條第一項各款所定情形之一者，不得自行駁回調解之聲請，爰明定此種情形，應報請法官處理之，俾資適用。
+
+* 411 調解委員行調解，得支領日費、旅費，並得酌支報酬；其計算方法及數額由司法院定之。前項日費、旅費及報酬，由國庫負擔。
+
+> 釋：一、原條文第一、二項已修正移列為第四百零六條之一第三項。二、為鼓勵社會公正人士參與調解，以提高調解績效，爰將原條文第三項修正移列為第一項。有關日費、旅費及報酬之計算方法與數額，宜由司法院視社會經濟狀況等因素而為訂定，爰並規定由司法院定之。三、調解委員係立於協同法官行調解之地位，與證人、鑑定人不同，其赴法院參與調解之日費、旅費及報酬，應非屬訴訟費用，當然應由國庫負擔。爰於第二項明定之，以杜爭議。四、第四百零六條之一第三項已規定原則上由調解委員先行調解，則法院應通知調解委員到場，乃屬當然，又「當事人推舉調解人」之制度亦經變更，故原第四項規定已無留存必要，爰予刪除。
+
+* 412 就調解事件有利害關係之第三人，經法官之許可，得參加調解程序；法官並得將事件通知之，命其參加。
+
+> 釋：將「法院」修正為「法官」。
+
+* 413 行調解時，為審究事件關係及兩造爭議之所在，得聽取當事人、具有專門知識經驗或知悉事件始末之人或其他關係人之陳述，察看現場或調解標的物之狀況；於必要時，得由法官調查證據。
+
+> 釋：調解委員或法官行調解時，為審究事件關係及兩造爭議之所在，得聽取當事人及其他關係人之陳述，察看現場或調解標的物之狀況，惟有關調查證據程序，則仍應由法官行之，爰修正明定之，俾資明確。
+
+* 414 調解時應本和平懇切之態度，對當事人兩造為適當之勸導，就調解事件酌擬平允方案，力謀雙方之和諧。
+
+> 釋：配合第四百零六條之一規定，將「調解推事」修正為「調解時」，並刪除「並徵詢調解人之意見」九字。
+
+* 415 （刪除）
+
+> 釋：依新增之第四百零六條之一規定，原則上已先由調解委員先行調解，本條規定無留存必要，爰予刪除。
+
+* 415.1 關於財產權爭議之調解，經兩造同意，得由調解委員酌定解決事件之調解條款。前項調解條款之酌定，除兩造另有約定外，以調解委員過半數定之。調解委員不能依前項規定酌定調解條款時，法官得於徵詢兩造同意後，酌定調解條款，或另定調解期日，或視為調解不成立。調解委員酌定之調解條款，應作成書面，記明年月日，或由書記官記明於調解程序筆錄，由調解委員簽名後，送請法官審核；其經法官核定者，視為調解成立。前項經核定之記載調解條款之書面，視為調解程序筆錄。法官酌定之調解條款，於書記官記明於調解程序筆錄時，視為調解成立。
+
+> 釋：一、本條係新增。二、關於財產權爭議之調解，如兩造均有成立調解之意願，惟因無法即就具體調解內容獲致結論，而願由調解委員酌定調解條款者，調解委員自宜予以酌定，以杜訟爭，而保護當事人選擇程序之機會，爰增設調解委員經兩造同意得酌定調解條款，並視為當事人已依該調解條款成立調解之規定，俾利適用。
+
+* 416 調解經當事人合意而成立；調解成立者，與訴訟上和解有同一之效力。調解有無效或得撤銷之原因者，當事人得向原法院提起宣告調解無效或撤銷調解之訴。前項情形，原調解事件之聲請人，得就原調解事件合併起訴或提起反訴，請求法院於宣告調解無效或撤銷調解時合併裁判之。並視為自聲請調解時，已經起訴。第五百條、第五百零二條及第五百零六條之規定，於第二項情形準用之。但有民法上無效之原因者，不受第五百條不變期間之限制。調解不成立者，法院應付與當事人證明書。
+
+> 釋：一、第一、二項不修正。二、原調解事件之聲請人就原調解事件合併起訴或提起反訴之情形，為免當事人權利因逾除斥期間或消滅時效期間而受影響，爰於第三項末增訂「並視為自聲請調解時，已經起訴。」。三、調解有民法上無效之原因者，乃當然無效，不因第五百條不變期間之經過而不得主張無效，爰於第四項增訂但書規定。四、第五項不修正。
+
+* 417 關於財產權爭議之調解，當事人不能合意但已甚接近者，法官應斟酌一切情形，其有調解委員者，並應徵詢調解委員之意見，求兩造利益之平衡，於不違反兩造當事人之主要意思範圍內，以職權提出解決事件之方案。前項方案，應送達於當事人及參加調解之利害關係人。
+
+> 釋：一、第一項之「調解推事」、「調解人」修正為「法官」、「調解委員」。二、第二項不修正。
 
 * 418 當事人或參加調解之利害關係人對於前條之方案，得於送達後十日之不變期間內，提出異議。於前項期間內提出異議者，視為調解不成立；其未於前項期間內提出異議者，視為已依該方案成立調解。第一項之異議，法院應通知當事人及參加調解之利害關係人。
 
 > 釋：一、為配合前條規定，將「裁定」改為「方案」，且提起異議之期間，係不變期間為表明其性質，於原條文「十日」之下加「不變期間」四字。又在該期間內得提出異議者，應限於當事人及參加調解之利害關係人，爰將原條文「利害關係人」修正為「參加調解之利害關係人」，以杜爭議。二、第二項亦配合前條規定而為修正，「裁定」改為「方案」。三、對於第一項之「方案」提出異議，直接影響調解是否成立，因之，法院對第一項之異議，法院除應通知當事人外，自尚應通知參與調解之利害關係人，爰於第三項增列「參加調解之利害關係人」。
 
-* 419 當事人兩造於期日到場而調解不成立者，法院得依一造當事人之聲請，命即為訴訟之辯論。但他造如聲請延展期日者，應許可之。當事人聲請調解而不成立，如聲請人於調解不成立證明書送達後十日之不變期間內起訴者，視為自聲請調解時，已經起訴。其於送達前起訴者，亦同。以起訴視為調解之聲請者，如調解不成立，除當事人聲請延展期日外，法院應即為訴訟之辯論，並仍自原起訴時，發生訴訟繫屬之效力。
+* 419 當事人兩造於期日到場而調解不成立者，法院得依一造當事人之聲請，按該事件應適用之訴訟程序，命即為訴訟之辯論。但他造聲請延展期日者，應許可之。前項情形，視為調解之聲請人自聲請時已經起訴。當事人聲請調解而不成立，如聲請人於調解不成立證明書送達後十日之不變期間內起訴者，視為自聲請調解時，已經起訴；其於送達前起訴者亦同。以起訴視為調解之聲請者，如調解不成立，除調解當事人聲請延展期日外，法院應按該事件應適用之訴訟程序，命即為訴訟之辯論，並仍自原起訴時，發生訴訟繫屬之效力。
 
-> 釋：一、當事人聲請調解，兩造均於期日到場而調解不成立，當事人未聲請即為訴訟之辯論，或因當事人兩造或一造於期日不到場，視為調解不成立之情形，為免影響當事人之形成權除斥期間之遵守與請求權時效期間之中斷，爰於第二項規定，如聲請人於調解不成立證明書送達後十日之不變期間內起訴者，視為自聲請調解時，已經起訴，其於送達前起訴者亦同。二、在以起訴視為調解聲請之事件，例如第四百零四條第二項、第四百二十四條第二項及第五百十九條第一項之情形，原係起訴事件，僅因法律規定視為調解之聲請而依調解程序進行，故如調解不成立時，原起訴之效力應即恢復，亦即仍自原起訴時發生訴訟繫屬之效力，此時不必再繳裁判費，並可兼顧時效期間之中斷及除斥期間之遵守。惟因法院所訂之期日，原為調解期日，並非言詞辯論期日，當事人未必已為言詞辯論之準備，因此當事人於調解期日到場，因調解不成立，若有聲請延展期日時，法院應准許之，不可依一造之聲請命為一造辯論判決。
+> 釋：一、訴訟事件應按該事件應適用之訴訟程序，進行訴訟之辯論。爰於第一項增列「按該事件應適用之訴訟程序」等字，俾資明確。二、當事人兩造於期日到場而調解不成立，法院依一造當事人之聲請，命即為訴訟辯論之情形，為免當事人權利因逾除斥期間或消滅時效期間而受影響，爰增設第二項，規定此種情形視為調解之聲請人自聲請調解時已經起訴。三、原第二項移列為第三項。四、原第三項移列為第四項，並增列「按該事件應適用之訴訟程序，命」等字。
 
-* 420 當事人兩造或一造於期日不到場者，法院酌量情形，得視為調解不成立或另定調解期日。
+* 420 當事人兩造或一造於期日不到場者，法官酌量情形，得視為調解不成立或另定調解期日。
 
-* 421 法院書記官應作調解程序筆錄，記載調解之成立或不成立及期日之延展或訴訟之辯論。第四百十七條之解決事件之方案，經調解推事當場宣示者，應一併記載於筆錄。調解成立者，應於十日內以筆錄正本，送達於當事人及參加調解之利害關係人。第二百十二條至第二百十九條之規定，於第一項、第二項筆錄準用之。
+> 釋：「法院」修正為「法官」。
 
-> 釋：第二項規定配合第四百十七條之修正，將「裁定」改為「解決事件之方案」。
+* 420.1 第一審訴訟繫屬中，得經兩造合意將事件移付調解。前項情形，訴訟程序停止進行。調解成立時，訴訟終結。調解不成立時，訴訟程序繼續進行。依第一項規定移付調解而成立者，原告得於調解成立之日起三十日內聲請退還已繳裁判費二分之一。
 
-* 422 調解程序中，調解推事所為之勸導及當事人所為之陳述或讓步，於調解不成立後起訴者，不得採為裁判之基礎。
+> 釋：一、本條係新增。二、為擴大調解功能，增多增選程序之機會，規定第一審訴訟繫屬中，法院得經兩造合意將事件移付調解。移付調解之事件，其訴訟程序停止進行。
 
-* 423 調解不成立後起訴者，其調解程序之費用，應作為訴訟費用之一部；不起訴者，由聲請人負擔。
+* 421 法院書記官應作調解程序筆錄，記載調解成立或不成立及期日之延展或訴訟之辯論。但調解委員行調解時，得僅由調解委員自行記錄調解不成立或延展期日情形。第四百十七條之解決事件之方案，經法官當場宣示者，應一併記載於筆錄。調解成立者，應於十日內以筆錄正本，送達於當事人及參加調解之利害關係人。第二百十二條至第二百十九條之規定，於第一項、第二項筆錄準用之。
 
-* 424 第四百二十七條第一項及第二項之訴訟，如逕向法院起訴者，宜於訴狀內表明其合於第四百零三條之規定，並添具釋明其事由之證據。起訴不合於第四百零三條之規定者，視為調解之聲請。
+> 釋：一、調解委員報請法官到場前所行之調解程序，可能極為冗長，應無一律命書記官到場製作調解程序筆錄之必要。爰於第一項增設但書，規定調解委員行調解時，得僅由調解委員自行記錄調解不成立或延展期日情形，以減輕書記官之工作負擔。二、第二項「調解推事」修正為「法官」。三、第三、四項不修正。
+
+* 422 調解程序中，調解委員或法官所為之勸導及當事人所為之陳述或讓步，於調解不成立後之本案訴訟，不得採為裁判之基礎。
+
+> 釋：「調解推事」修正為「調解委員或法官」。
+
+* 423 調解不成立後起訴者，其調解程序之費用，應作為訴訟費用之一部；不起訴者，由聲請人負擔。第八十四條之規定，於調解成立之情形準用之。
+
+> 釋：一、原條文不修正，列為第一項。二、增訂第二項，明定準用第八十四條之規定，以利適用。
+
+* 424 第四百零三條第一項之事件，如逕向法院起訴者，宜於訴狀內表明其具有第四百零六條第一項所定事由，並添具釋明其事由之證據。其無該項所定事由而逕行起訴者，視為調解之聲請。以一訴主張數項標的，其一部非屬第四百零三條第一項之事件者，不適用前項視為調解聲請之規定。
+
+> 釋：一、第一項「訴訟」修正為「事件」。二、原第二項規定移併於第一項，並做文字修正，俾資明確。三、當事人提起主觀或客觀合併之訴，其訴之一部非屬第四百零三條第一項之事件者，如就一部為強制調解，徒增程序延滯，爰於第二項規定此種情形，不適用前項視為調解聲請之規定。
 
 * 425 調解之聲請經撤回者，視為未聲請調解。但聲請人應負擔因聲請所生之全部費用。
 
-* 426 調解推事、書記官及調解人因經辦調解事件，知悉他人職務上、業務上之秘密或其他涉及個人隱私之事項，應保守秘密。
+* 426 法官、書記官及調解委員因經辦調解事件，知悉他人職務上、業務上之秘密或其他涉及個人隱私之事項，應保守秘密。
 
-> 釋：調解事件雖偶有涉及當事人隱私，有不足為外人道之情形，惟原條文規定，稍嫌籠統，不易執行。且調解事件經調解不成立視為起訴後，則以公開審判為原則，故保密之範圍，應酌予限制，爰修正之。
+> 釋：「調解推事」、「調解人」修正為「法官」、「調解委員」。
 
-* 427 關於財產權之訴訟，其標的之金額或價額在第四百六十六條所定之上訴利益額數以下者，適用本章所定之簡易程序。左列各款訴訟，不問其標的金額或價額一律適用簡易程序：一、因房屋定期租賃或定期借貸關係所生之爭執涉訟者。二、僱用人與受僱人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿、運送費或因寄存行李、財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線或設置界標涉訟者。六、本於票據有所請求而涉訟者。七、本於合會有所請求而涉訟者。八、因利息、紅利、租金、贍養費、退職金及其他定期給付涉訟者。不合於前二項規定之訴訟，得以當事人之合意，適用簡易程序。第二項之訴訟，案情繁雜者，得依當事人聲請，並經法院認為適當時，以裁定改用通常訴訟程序。但足致訴訟程序延滯者，不在此限。前項裁定，不得聲明不服。
+* 427 關於財產權之訴訟，其標的之金額或價額在新臺幣五十萬元以下者，適用本章所定之簡易程序。下列各款訴訟，不問其標的金額或價額一律適用簡易程序：一、因建築物或其他工作物定期租賃或定期借貸關係所生之爭執涉訟者。二、雇用人與受雇人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿、運送費或因寄存行李、財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線或設置界標涉訟者。六、本於票據有所請求而涉訟者。七、本於合會有所請求而涉訟者。八、因請求利息、紅利、租金、贍養費、退職金或其他定期給付涉訟者。九、因動產租賃或使用借貸關係所生之爭執涉訟者。十、因第一款至第三款、第六款至第九款所定請求之保證關係涉訟者。不合於前項規定之訴訟，得以當事人之合意，適用簡易程序，其合意應以文書證之。不合於第一項及第二項之訴訟，法院適用簡易程序，當事人不抗辯而為本案之言詞辯論者，視為已有前項之合意。第二項之訴訟，案情繁雜或其訴訟標的金額或價額逾第一項所定額數十倍以上者，法院得依當事人聲請，以裁定改用通常訴訟程序，並由原法官繼續審理。前項裁定，不得聲明不服。第一項所定數額，司法院得因情勢需要，以命令減至新臺幣二十五萬元，或增至七十五萬元。
 
-> 釋：一、關於適用簡易訴訟程序之訴訟標的金額或價額，為配合社會經濟之實際狀況，並與通常訴訟程序上訴第三審之限制相呼應，以避免將來修正其上訴第三審金額時再修正之煩，爰於第四百二十七條第一項將適用簡易訴訟程序之訴訟標的金額或價額修正為在第四百六十六條所定之上訴利益額數以下，以資因應。二、房屋定期租賃關係所生之訴訟，本質上較為單純，為擴大簡易訴訟程序適用之機會與範圍就定期之房屋租賃及借貸訴訟均得適用簡易程序。三、因票據爭執所生之訴訟以早日終結為宜，且票據係無因證券，得抗辯之事由較少，爰將票據案件列為適用簡易程序。四、合會在我國民間習慣上，已存在多年，部分銀行並有此類業務，最高法院就此並著有判例，為求此類訴訟案件速結，爰併列於簡易程序中。五、利息等定期給付訴訟，法律性質簡易，消減時效期間較短，爰列入簡易訴訟程序，以求速結。六、第二項所定之訴訟事件，案情大抵較為單純，爭執亦可能不大，故行速審速結之簡易程序，惟如案情繁雜之訴訟事件，亦一概適用簡易程序或有欲速不達之弊，故新增第四項，規定此等訴訟得依當事人聲請，並經法院認為適當時，以裁定改用通常訴訟程序，但足致訴訟程序延滯者，不在此限。七、訴訟程序由簡易程序改為通常訴訟程序，係為求訴訟之妥適進行，為免影響程序之安定及延滯訴訟，新增第五項，規定此等裁定，不得聲明不服。
+> 釋：一、為配合小額程序制度之增設，乃調整簡易程序之適用範圍。二、為保障當事人程序上之權益，乃放寬當事人聲請改用通常訴訟程序之條件。
 
-* 428 起訴及其他期日外之聲明或陳述，概得以言詞為之。
+* 427.1 同一地方法院適用簡易程序審理之事件，其事務分配辦法由司法院定之。
 
-* 429 以言詞起訴者，應將筆錄與言詞辯論期日之通知書，一併送達於他造。就審期間，至少應有五日。但有急迫情形者，不在此限。
+> 釋：一、本條係新增。二、同一地方法院各簡易庭相互間及地方法院與其所屬簡易庭相互間，關於簡易程序事件之審理權限，乃同一地方法院之事務分配問題，且事涉瑣細，宜授權司法院另以辦法定之。
+
+* 428 第二百四十四條第一項第二款所定事項，原告於起訴時得僅表明請求之原因事實。起訴及其他期日外之聲明或陳述，概得以言詞為之。
+
+> 釋：一、依第二百四十四條第一項第二款規定，當事人於起訴時應表明其訴訟標的。爰於第一項增訂原告於起訴時得僅表明請求之原因事實，至於具體事件，如依原告所表明請求之原因事實，尚難判斷其所得主張之法律關係時，審判長應適時行使闡明權，命其敘明或補充之。二、原條文不修正，列為第二項。
+
+* 429 以言詞起訴者，應將筆錄與言詞辯論期日之通知書，一併送達於被告。就審期間，至少應有五日。但有急迫情形者，不在此限。
+
+> 釋：一、配合第二百五十一條第一項之規定，將第一項末二字「他造」修正為「被告」。二、第二項不修正。
 
 * 430 言詞辯論期日之通知書，應表明適用簡易訴訟程序，並記載當事人務於期日攜帶所用證物及偕同所舉證人到場。
 
@@ -904,41 +970,141 @@
 
 * 432 當事人兩造於法院通常開庭之日，得不待通知，自行到場，為訴訟之言詞辯論。前項情形，其起訴應記載於言詞辯論筆錄，並認當事人已有第四百二十七條第三項適用簡易程序之合意。
 
-* 433 通知證人或鑑定人，得不送達通知書，依法院認為便宜之方法行之。但證人或鑑定人如不於期日到場，仍應送達通知書。法院得命證人或鑑定人於法院外以書狀為陳述。但以預料其陳述可信者為限。前項情形，應令證人或鑑定人具結，附於書狀提出。
+* 433 通知證人或鑑定人，得不送達通知書，依法院認為便宜之方法行之。但證人或鑑定人如不於期日到場，仍應送達通知書。法院認為適當或經兩造當事人同意者，得命證人或鑑定人於法院外以書狀為陳述。前項情形，應令證人或鑑定人具結，附於書狀，並經公證人認證後提出。證人或鑑定人得以電信傳真或其他科技設備將前二項文書傳送於法院，效力與提出文書同；其辦法由司法院定之。
+
+> 釋：為配合現代科技之發展，便利證人或鑑定人以書面為陳述，明定證人或鑑定人得以電信傳真或其他科技設備將其陳述之書狀、結文及認證書等文書傳送於法院，其效力與提出文書同。
 
 * 433.1 簡易訴訟程序事件，法院應以一次期日辯論終結為原則。
 
 > 釋：為求從速終結，減輕人民訟累，故增本條。
 
-* 433.2 言詞辯論筆錄，經法院之許可，得省略應記載之事項。但當事人有異議者，不在此限。前項規定，於言詞辯論程式之遵守、和解、認諾、捨棄、撤回、自認及裁判之宣示，不適用之。
+* 433.2 言詞辯論筆錄，經法院之許可，得省略應記載之事項。但當事人有異議者，不在此限。前項規定，於言詞辯論程式之遵守、捨棄、認諾、撤回、和解、自認及裁判之宣示，不適用之。
 
-> 釋：一、為減輕書記官之負擔，故將簡易程序之言詞辯論筆錄簡化，增設本條第一項規定。二、言詞辯論時，有關程式之遵守、和解、認諾、捨棄、撤回、自認及裁判之宣示，對當事人權益影響頗大，爰於第二項規定，仍應記載於言詞辯論筆錄，俾有依據。
+> 釋：一、第一項不修正。二、配合第四十四條、第五十一條第四項及第七十一條第一項之規定，將第二項作文字上之調整。
 
 * 433.3 言詞辯論期日，當事人之一造不到場者，法院得依職權由一造辯論而為判決。
 
 > 釋：簡易訴訟程序宜從速終結，爰增列本條，規定當事人之一造不到場，法院即得依職權命一造辯論而為判決，以資因應。
 
-* 434 判決書內之事實及理由，得合併記載其要領。法院亦得於宣示判決時，命將判決主文、所裁判之訴訟標的及其理由要領，記載於言詞辯論筆錄，不另作判決書；其筆錄正本或節本之送達，與判決正本之送達，有同一之效力。第二百三十條之規定，於前項筆錄準用之。
+* 434 判決書內之事實及理由，得合併記載其要領或引用當事人書狀、筆錄或其他文書，必要時得以之作為附件。法院亦得於宣示判決時，命將判決主文及其事實、理由之要領，記載於言詞辯論筆錄，不另作判決書；其筆錄正本或節本之送達，與判決正本之送達，有同一之效力。第二百三十條之規定，於前項筆錄準用之。
 
-> 釋：一、將判決書之事實及理由分項記載，實務上常導致事實項下及理由項下重複記載情形，不符訴訟經濟原則，爰於本條第一項規定判決書內之事實及理由得合併記載其要領，以簡化簡易訴訟程序之判決書。二、依現行法規定，法院就簡易程序之判決，仍需制作冗長判決書，為使法院判決亦能配合程序之簡易迅速，增訂本條第二項。三、前項既以言詞辯論筆錄代替判決書，則關於判決書正本或節本有關法院書記官簽名，並蓋法院印之規定，自應準用於言詞辯論筆錄正本與節本，故增設第三項規定。
+> 釋：一、判決書若已記載完全者，應無重複記載之必要，爰於第一項增訂判決書得引用當事人書狀等文書之規定，又法院如認有將前述文書之全部或一部附於判決書之必要者，自得以之作為判決書之附件，爰並明定之。二、判決書應記載足以確定判決對象之內容，原條文第二項規定記載「理由要領」，易致誤解為凡屬第二百二十六條第一項第四款事實項下應記載之事項，均毋庸記載，尚欠妥適，又法院判決所裁判之訴訟標的，應已包含於理由要領中，亦無特為標明之必要，爰將第二項「判決主文、所裁判之訴訟標的及其理由要領」修正為「判決主文及其事實、理由之要領」。三、第三項不修正。
 
-* 435 因訴之合併、變更、追加或提起反訴，致其訴之全部或一部，不屬第四百二十七條第一項及第二項之範圍者，除經當事人合意外，其辯論及裁判，不得依簡易程序之規定。
+* 434.1 有下列各款情形之一者，判決書得僅記載主文：一、本於當事人對於訴訟標的之捨棄或認諾者。二、受不利判決之當事人於宣示判決時，捨棄上訴權者。三、受不利判決之當事人於宣示判決時，履行判決所命之給付者。
 
-> 釋：簡易訴訟程序事件，或因訟爭利益額較少，或因事件性質之簡易，有從速終結之必要與可能，為節勞費而有簡易訴訟程序之設，其原則上二審終結，非具特別條件不得向最高法院提起上訴或抗告，此與通常訴訟程序有別，故因訴之合併、變更、追加或提起反訴，致訴訟事件非屬簡易訴訟程序之範疇，原則上仍應依通常訴訟程序，爰設本規定，俾資準繩。又在高等法院審理之第二審程序中，當事人為訴之變更、追加或提起反訴，致事件屬於第四百二十七條第一項或第二項之範圍時，因高等法院之第二審程序並無適用簡易訴訟程序之規定，故該事件雖由通常訴訟事件變為簡易訴訟事件，但訴訟程序仍屬通常訴訟程序，並不因之變為簡易訴訟程序；該事件經高等法院第二審判決後，依第四百六十六條第四項之規定，仍不得向最高法院提起第三審上訴。
+> 釋：一、本條係新增。二、當事人於言詞辯論時已為訴訟標的之捨棄或認諾，或受不利判決之當事人於宣示判決時已捨遮上訴權或履行判決所命之給付者，判決書就該部分之事實及理由，應無再為記載之必要，爰規定此種情形判決書得僅記載主文，以省勞費。
 
-* 436 簡易訴訟程序，在獨任推事前行之。簡易訴訟程序，除本章別有規定外，仍適用第一章通常訴訟程序之規定。
+* 435 因訴之變更、追加或提起反訴，致其訴之全部或一部，不屬第四百二十七條第一項及第二項之範圍者，除當事人合意繼續適用簡易程序外，法院應以裁定改用通常訴訟程序，並由原法官繼續審理。前項情形，被告不抗辯而為本案之言詞辯論者，視為已有適用簡易程序之合意。
 
-* 436.1 對於簡易程序獨任推事所為之裁判，得上訴或抗告於管轄之地方法院，其審判以合議行之。當事人於前項上訴程序，為訴之變更、追加或提起反訴，致應適用通常訴訟程序者，不得為之。第一項之上訴及抗告程序，準用第三編第一章及第四編之規定。
+> 釋：原條文僅規定除經當事人合意外，不得行簡易程序，並未明定改行通常程序，適用上尚欠明確，爰予明定法院應以裁定改用通常訴訟程序，並規定由原法官繼續審理，避免因案件改交他法官審理而造成訴訟延滯。
 
-> 釋：對於獨任推事依簡易訴訟程序而為之裁判，聲明不服者，規定由地方法院合議庭審判，以減輕高等法院之負擔。且為期與本法第四百三十七條上訴第二審及第四百六十四條上訴第三審之用語一致，爰於地方法院上加列「管轄」兩字。於簡易事件之第二審上訴程序中，因訴之變更、追加或提起反訴，致應適用通常訴訟程序者，為免影響當事人之審級利益及簡易程序速審速結之特質，均不得為之。簡易訴訟程序之第二審，雖由地方法院合議庭審判，仍屬簡易訴訟程序，而非通常訴訟程序之第二審，自宜另設明文規定，爰於本條第三項規定其上訴及抗告程序，準用第三編第一章及第四編之規定，俾資明確。
+* 436 簡易訴訟程序在獨任法官前行之。簡易訴訟程序，除本章別有規定外，仍適用第一章通常訴訟程序之規定。
 
-* 436.2 對於第四百二十七條第二項條簡易訴訟程序之第二審裁判，其上訴利益逾第四百六十六條所定之額數者，當事人僅得以其適用法規顯有錯誤為理由，逕向最高法院提起上訴或抗告。前項上訴及抗告，除別有規定外，仍適用第三編第二章第三審程序、第四編抗告程序之規定。
+> 釋：一、第一項之「推事」修正為「法官」。二、第二項不修正。
 
-> 釋：為貫徹最高法院法律審之精神，並求裁判上法律見解之統一，特增設本條規定，就第四百二十七條第二項簡易訴訟程序之第二審裁判，其上訴利益逾第四百六十六條所定之額數者，使當事人得逕向最高法院提起第三審上訴或抗告，惟限制以原裁判適用法規顯有錯誤為理由，始得為之。簡易訴訟程序與通常訴訟程序之第三審均為法律審，故有關通常訴訟程序之第三審上訴及抗告之規定，除與簡易訴訟程序之性質不相容之部分，本編已自行規定者外，其餘規定，仍可適用於簡易訴訟程序之上訴及抗告。
+* 436.10 依小額程序起訴者，得使用表格化訴狀；其格式由司法院定之。
+
+> 釋：一、本條係新增。二、為便利不諳法律規定之小額債權人起訴，並增進小額程序之簡速性，宜許當事人選擇使用表格化訴狀，爰明定依小額程序起訴者，得使用表格化訴狀，並規定其格式由司法院定之，以利適用。
+
+* 436.1 對於簡易程序之第一審裁判，得上訴或抗告於管轄之地方法院，其審判以合議行之。當事人於前項上訴程序，為訴之變更、追加或提起反訴，致應適用通常訴訟程序者，不得為之。第一項之上訴及抗告程序，準用第四百三十四條第一項、第四百三十四條之一及第三編第一章、第四編之規定。對於依第四百二十七條第五項規定改用通常訴訟程序所為之裁判，得上訴或抗告於管轄之高等法院。
+
+> 釋：一、第一項首句修正為「對於簡易程序之第一審裁判」，俾資明確。二、第二項不修正。三、為簡化簡易程序第二審判決書，避免不必要或重複之記載，以符訴訟經濟原則，爰修正第三項，規定第四百三十四條第一項及第四百三十四條之二之規定，於簡易訴訟之第二審程序準用之。四、對於依通常訴訟程序所為之裁判，當事人如有不服，當然應上訴或抗告於管轄之高等法院，爰增設第四項明定之，以杜爭議。
+
+* 436.11 小額程序，得於夜間或星期日或其他休息日行之。但當事人提出異議者，不在此限。
+
+> 釋：一、本條係新增。二、一般國民多於日間工作，小額程序如一律於日間工作時間內開庭，當事人常需請假赴法院為訴訟行為，不符其小額訴訟之利益，爰規定小額程序得於夜間或休息日行之，俾便法院斟酌實際情形指定適當之開庭時間。又夜間或休息日開庭，對部分當事人而言，或有不便，爰併設但書規定，以資兼顧。
+
+* 436.12 第四百三十六條之八所定事件，依法應行調解程序者，如當事人一造於調解期日五日前，經合法通知無正當理由而不於調解期日到場，法院得依到場當事人之聲請，命即為訴訟之辯論，並得依職權由其一造辯論而為判決。調解期日通知書，並應記載前項不到場之效果。
+
+> 釋：一、本條係新增。二、起訴前應經法院調解之小額事件，如一造不到場，他造勢必經二次以上之期日，始能獲得裁判，實與小額程序之簡速目的不合，爰增訂第一項規定。三、為保障欠缺法律知識之當事人權益，於第二項規定前項不到場之效果，應於調解期日通知書記載之，俾促當事人注意。
+
+* 436.13 法院認為必要時，得依職權訊問當事人，以其陳述為證據。前項情形，審判長得於訊問前或訊問後命當事人具結，並準用第三百十二條第二項、第三百十三條及第三百十四條第一項之規定。當事人無正當理由拒絕陳述或具結者，法院得審酌情形，認他造關於訊問事項之主張為真實。當事人經法院命其本人到場，無正當理由而不到場者，視為拒絕陳述。但命其到場之通知書係寄存送達或公示送達者，不在此限。法院命當事人本人到場之通知書，應記載前項不到場及第三項拒絕陳述之效果。前五項規定，於當事人之法定代理人準用之。
+
+> 釋：一、本條係新增。二、第一項規定法院於必要時得依職權訊問當事人，而以其陳述作為證據。三、為使審判長得斟酌情形，於必要時命當事人具結，以加強當事人陳述之可信度，爰於第二項規定審判長得於訊問前或訊問後命當事人具結。四、訊問當事人制度功能之發揮，須賴當事人之據實陳述。爰於第三項規定。五、第四項明定當事人無正當理由不從法院命其本人到場之裁定者，視為拒絕陳述，法院得依前項規定審酌情形，認他造關於訊問事項之主張為真實。六、第五項規定前項通知書應記載當事人不到場及拒絕陳述之效果，俾促當事人注意。七、當事人如係無訴訟能力之人，其法律行為多由法定代理人代為或經法定代理人同意，為期迅速發現真實，常有訊問法定代理人之必要，爰於第六項設準用規定。
+
+* 436.14 有下列各款情形之一者，法院得不調查證據，而審酌一切情況，認定事實，為公平之裁判：一、經兩造同意者。二、調查證據所需時間、費用與當事人之請求顯不相當者。
+
+> 釋：一、本條係新增。二、規定如兩造同意者，法院得不調查證據，而審酌一切情況，認定事實，為公平之裁判。
+
+* 436.15 當事人為訴之變更、追加或提起反訴，除當事人合意繼續適用小額程序並經法院認為適當者外，僅得於第四百三十六條之八第一項之範圍內為之。
+
+> 釋：一、本條係新增。二、惟當事人如就變更、追加後之新訴或反訴合意繼續適用小額程序並經法院認為適當者，為免當事人另行起訴以求訴訟經濟，仍得繼續適用小額程序。
+
+* 436.16 當事人不得為適用小額程序而為一部請求。但已向法院陳明就其餘額不另起訴請求者，不在此限。
+
+> 釋：一、本條係新增。二、如許當事人就不屬小額事件之請求，割裂而為一部請求，以利用小額程序，適用特別規定，非但增加法院之案件負擔，影響小額程序功能之發揮，於被告程序上權益之保護，尤嫌欠周，爰明文禁止之。
+
+* 436.17 小額事件於第一審程序成立和解者，原告得於和解成立之日起三十日內聲請退還已繳裁判費二分之一。
+
+> 釋：一、本條係新增。二、為鼓勵小額事件當事人成立和解，以息訟爭，並減省法院之勞費，爰規定原告得於和解成立之日起三十日內聲請退還已繳裁判費二分之一。
+
+* 436.18 判決書得僅記載主文，就當事人有爭執事項，於必要時得加記理由要領。前項判決得於訴狀或言詞起訴筆錄上記載之。前二項判決之記載得表格化，其格式及正本之製作方式，由司法院定之。
+
+> 釋：一、本條係新增。二、為提昇法院迅速辦理小額事件之效率，充分發揮小額程序之簡速功能，小額程序判決書之製作方式應予簡化，爰予明定之。
+
+* 436.19 法院為訴訟費用之裁判時，應確定其費用額。前項情形，法院得命當事人提出費用計算書及釋明費用額之文書。
+
+> 釋：一、本條係新增。二、為免小額程序之當事人於判決確定後另行聲請確定訴訟費用之勞費，爰參考第五百十四條第二款及非訟事件法第一百零九條之規定，增訂本條。
+
+* 436.2 對於簡易訴訟程序之第二審裁判，其上訴利益逾第四百六十六條所定之額數者，當事人僅得以其適用法規顯有錯誤為理由，逕向最高法院提起上訴或抗告。前項上訴及抗告，除別有規定外，仍適用第三編第二章第三審程序、第四編抗告程序之規定。
+
+> 釋：一、第一項原條文規定得上訴或抗告於最高法院之簡易程序第二審裁判，以第四百二十七條第二項之訴訟為限，致使同條項以外之簡易程序第二審裁判，其上訴利益雖逾第四百六十六條所定之額數，亦不得上訴或抗告，於當事人程序上權利之保障，尚嫌欠周，爰將「第四百二十七條第二項」十字刪除。二、第二項不修正。
+
+* 436.20 法院為被告敗訴之判決時，應依職權宣告假執行。
+
+> 釋：一、本條係新增。二、為便利小額程序之勝訴當事人早日實現其權利，爰明定法院為被告敗訴之判決時，應依職權宣告假執行。
+
+* 436.21 法院命被告為給付時，如經原告同意，得為被告於一定期限內自動清償者，免除部分給付之判決。
+
+> 釋：一、本條係新增。二、為鼓勵小額事件之被告自動履行債務，宜授權法院於命被告為給付時，得徵詢原告同意後，在判決內酌定一定期限，並諭示被告若於期限內自動給付若干數額者，其剩餘之給付義務即行免除。爰增訂本條。
+
+* 436.22 法院依被告之意願而為分期給付或緩期清償之判決者，得於判決內定被告逾期不履行時應加給原告之金額。但其金額不得逾判決所命原給付金額或價額之三分之一。
+
+> 釋：一、本條係新增。二、為避免小額事件進入強制執行程序，法院於被告陳明其有分期給付或緩期清償之需要時，固宜儘可能斟酌被告境況及原告利益，依被告之意願為分期給付或緩期清償之判決，俾使被告自動履行債務。
+
+* 436.23 第四百二十八條至第四百三十一條、第四百三十二條第一項、第四百三十三條至第四百三十四條之一及第四百三十六條之規定，於小額程序準用之。
+
+> 釋：一、本條係新增。二、有關簡易訴訟程序之特別規定，如不違背小額程序之立法意旨者，自宜予以準用。爰明定得準用之條文，俾利適用。
+
+* 436.24 對於小額程序之第一審裁判，得上訴或抗告於管轄之地方法院，其審判以合議行之。對於前項第一審裁判之上訴或抗告，非以其違背法令為理由，不得為之。
+
+> 釋：一、本條係新增。二、明定對於小額程序之第一審裁判聲明不服者，由地方法院合議庭審判。三、為貫徹小額程序之簡速性，避免因上訴或抗告費時而不符訴訟利益，小額事件之裁判原則上宜於第一審確定。惟第一審裁判如有違背法令之情事者，為保障當事人之權益，自應許其上訴或抗告於第二審，爰於第二項明定之。
+
+* 436.25 上訴狀內應記載上訴理由，表明下列各款事項：一、原判決所違背之法令及其具體內容。二、依訴訟資料可認為原判決有違背法令之具體事實。
+
+> 釋：一、本條係新增。二、提起小額程序第二審上訴，須以原判決違背法令為理由始得為之，為便利第二審法院審理，以貫徹小額程序之簡速目的，宜責由上訴人於上訴狀內記載上訴理由。
+
+* 436.26 應適用通常訴訟程序或簡易訴訟程序事件，而第一審法院行小額程序者，第二審法院得廢棄原判決，將該事件發回原法院。但第四百三十六條之八第四項之事件，當事人已表示無異議或知其違背或可得而知其違背，並無異議而為本案辯論者，不在此限。前項情形，應予當事人陳述意見之機會，如兩造同意由第二審法院繼續適用小額程序者，應自為裁判。第一項之判決，得不經言詞辯論為之。
+
+> 釋：一、本條係新增。二、小額程序第二審法院上訴為有理由者，原則上應廢棄原判決而自為判決，不得將事件發回原法院。爰予明定之。
+
+* 436.27 當事人於第二審程序不得為訴之變更、追加或提起反訴。
+
+> 釋：一、本條係新增。二、為期小額事件之第二審程序能迅速終結，以貫徹小額程序之簡速目的，明定不許於第二審程序為訴之變更、追加或提起反訴。
+
+* 436.28 當事人於第二審程序不得提出新攻擊或防禦方法。但因原法院違背法令致未能提出者，不在此限。
+
+> 釋：一、本條係新增。二、為貫徹小額程序之簡速性，爰明定當事人於第二審程序不得提出新攻擊或防禦方法，俾免爭議。
+
+* 436.29 小額程序之第二審判決，有下列情形之一者，得不經言詞辯論為之：一、經兩造同意者。二、依上訴意旨足認上訴為無理由者。
+
+> 釋：一、本條係新增。二、小額程序之第二審原則上亦應行言詞辯論，惟如兩造同意不行言詞辯論或依上訴意旨足認上訴為無理由者，為節省勞費，宜許法院斟酌情形，不經言詞辯論而為判決，爰增訂本條明定之。
 
 * 436.3 對於簡易訴訟程序之第二審裁判，提起第三審上訴或抗告，須經原裁判法院之許可。前項許可，以訴訟事件所涉及之法律見解具有原則上之重要性者為限。第一項之上訴或抗告，為裁判之原法院認為應行許可者，應添具意見書，敘明合於前項規定之理由，逕將卷宗送最高法院；認為不應許可者，應以裁定駁回其上訴或抗告。前項裁定，得逕向最高法院抗告。
 
 > 釋：一、對於簡易訴訟程序之第二裁判，雖僅以其適用法規顯有錯誤為限，當事人得逕向最高法院提起上訴或抗告，惟為免當事人任意提起第三審上訴或抗告，爰增設由原裁判法院許可之限制。二、簡易程序之第三審上訴或抗告，既在求裁判上法律見解之統一，則原法院之許可上訴或抗告，應以該事件所涉及之法律見解具有原則上之重要性者為限，所謂原則上之重要性，指該訴訟事件所涉及之法律問題意義重大而有加以闡釋之必要而言。三、當事人就訴訟事件提起第三審上訴或抗告時，該訴訟事件所涉及之法律見解是否具有原則上之重要性，自以為裁判之原法院知之最詳，如原法院認為應許可上訴或抗告者，由其就此添具意見書，除可減輕最高法院之負擔外，並可免濫行上訴之弊，又原法院認為不應許可第三審上訴或抗告者，規定以裁定駁回上訴或抗告，俾資依據。四、原法院認不應許可上訴或抗告，而以裁定駁回時，為維護當事人之權益，規定得逕向最高法院提起抗告。
+
+* 436.30 對於小額程序之第二審裁判，不得上訴或抗告。
+
+> 釋：一、本條係新增。二、為免日後爭議，並貫徹小額程序之簡速性，爰明定對於小額程序之第二審裁判，不得上訴或抗告。
+
+* 436.31 對於小額程序之第一審裁判，提起上訴或抗告，經以上訴或抗告無理由為駁回之裁判者，不得更以同一理由提起再審之訴或聲請再審。
+
+> 釋：一、本條係新增。二、為避免當事人以同一理由對於第二審裁判提起再審之訴或聲請再審，致增法院不必要之勞費，爰明定此種情形不得更以同一理由對於第二審裁判提起再審之訴或聲請再審。
+
+* 436.32 第四百三十六條之十三、第四百三十六條之十四、第四百三十六條之十九、第四百三十六條之二十一及第四百三十六條之二十二之規定，於小額事件之上訴程序準用之。第四百三十八條至第四百四十五條、第四百四十八條至第四百五十條、第四百五十四條、第四百五十五條、第四百五十九條、第四百六十二條、第四百六十三條、第四百六十八條、第四百六十九條第一款至第五款、第四百七十一條至第四百七十三條及第四百七十五條第一項之規定，於小額事件之上訴程序準用之。第四編之規定，於小額事件之抗告程序準用之。第五編之規定，於小額事件之再審程序準用之。
+
+> 釋：為節省勞費，許法院於兩造同意或依上訴意旨足認上訴無理由時，不經言詞辯論而判決，爰增訂之。
 
 * 436.4 依第四百三十六條之二第一項提起上訴或抗告者，應同時表明上訴或抗告理由；其於裁判宣示後送達前提起上訴或抗告者，應於裁判送達後十日內補具之。未依前項規定表明上訴或抗告理由者，毋庸命其補正，由原法院裁定駁回之。
 
@@ -955,6 +1121,14 @@
 * 436.7 對於簡易訴訟程序之第二審確定終局裁判，如就足影響於裁判之重要證物，漏未斟酌者，亦得提起再審之訴或聲請再審。
 
 > 釋：對於簡易訴訟程序之第二審裁判，提起第三審上訴或抗告，須具備第四百三十六條之二第一項、第四百三十六條之三第二項規定之「適用法規顯有錯誤」與「具有原則上重要性」之要件，始得為之，漏未斟酌重要證物，與前述要件不同，如不另畀當事人以救濟之道，於其權益之保護，自嫌欠周，爰增列本條規定，以維護當事人之權益。至第四百九十六條至第四百九十八條以及其他有關再審條文之規定，除本章另規定外，仍在適用之列。
+
+* 436.8 關於請求給付金錢或其他代替物或有價證券之訴訟，其標的金額或價額在新臺幣十萬元以下者，適用本章所定之小額程序。法院認適用小額程序為不適當者，得依職權以裁定改用簡易程序，並由原法官繼續審理。前項裁定，不得聲明不服。第一項之訴訟，其標的金額或價額在新臺幣五十萬元以下者，得以當事人之合意適用小額程序，其合意應以文書證之。
+
+> 釋：一、本條係新增。二、為使民眾就其日常生活中所發生之小額給付請求事件，能循簡便、迅速、經濟之訴訟程序獲致解決，以提昇國民生活品質，爰增訂小額程序。三、凡關於請求給付金錢或其他代替物或有價證券之訴訟，其標的金額或價額在十萬元以下者，應適用小額程序，但法院如認適用小額程序為不適當者，得依職權以裁定改用簡易程序。
+
+* 436.9 小額事件當事人之一造為法人或商人者，於其預定用於同類契約之條款，約定債務履行地或以合意定第一審管轄法院時，不適用第十二條或第二十四條之規定。但兩造均為法人或商人者，不在此限。
+
+> 釋：一、本條係新增。二、惟小額事件當事人之一造如為法人或商人，以其預定用於同類契約之債務履行地條款或合意管轄條款與他造訂立契約者，締約之他造就此類條款幾無磋商變更之餘地，為保障小額事件之經濟上弱勢當事人權益，避免其因上述附合契約條款而需遠赴對造所預定之法院進行訴訟，爰規定不適用第十二條或第二十四條之規定。
 
 * 437 對於第一審之終局判決，得上訴於管轄第二審之法院。
 
@@ -1018,9 +1192,9 @@
 
 * 465 對於第一審判決，或其一部未經向第二審法院上訴，或附帶上訴之當事人，對於維持該判決之第二審判決，不得上訴。
 
-* 466 對於財產權上訴之第二審判決，如因上訴所得受之利益不逾十萬元者，不得上訴。前項所定數額，司法院得因情勢需要，以命令減為五萬元，或增至十五萬元。計算上訴利益，準用民事訴訟費用法關於計算訴訟標的價額之規定。對於第四百二十七條第二項訴訟所為之第二審判決，不得上訴。
+* 466 對於財產權訴訟之第二審判決，如因上訴所得受之利益，不逾新臺幣六十萬元者，不得上訴。對於第四百二十七條訴訟，如依通常訴訟程序所為之第二審判決，仍得上訴於第三審法院。其因上訴所得受之利益不逾新臺幣六十萬元者，適用前項規定。第二項所定數額，司法院得因情勢需要，以命令減至新臺幣三十萬元，或增至一百萬元。計算上訴利益，準用關於計算訴訟標的價額之規定。
 
-> 釋：關於財產權之訴訟，其因上訴第三審所得受之利益，若不問多寡概許其上訴，不惟徒增訟累，且於當事人與國家之利益有違，故現行民事訴訟法特設本條，規定因上訴所得受之利益不逾八千元者，不得上訴第三審，以資因應，惟近年來由於我國工商業發達，經濟突飛猛進，導致社會結構劇烈變遷。八千元上訴利益之限制已失其限制目的。爰參照我國經濟情況及最高法院功能，將此數額調高，以減少訟累，並保護當事人及國家利益。
+> 釋：一、為因應社會經濟之成長，並期低額訴訟早日確定，及合理分配有限之訴訟資源，爰將不得上訴第三審之利益數額提高為新臺幣六十萬元。二、將原條文第四項修正，並移列為第二項。三、原第二項移列為第三項，又配合第一項上訴利益額數之提高，修正司法院得以命令增減之額度，並將第二項原條文「減為」修正為「減至」，俾富彈性，且與同項之「增至」前後一致。四、原第三項移列為第四項，並刪除「民事訴訟費用法」七字，俾免因民事訴訟費用法修正而影響適用。
 
 * 467 對於第二審判決上訴，非以其違背法令為理由，不得為之。
 
@@ -1028,11 +1202,13 @@
 
 * 469 有左列各款情形之一者，其判決當然為違背法令：一、判決法院之組織不合法者。二、依法律或裁判應迴避之推事參與裁判者。三、法院於權限之有無辨別不當，或違背專屬管轄之規定者。四、當事人於訴訟未經合法代理者。五、違背言詞辯論公開之規定者。六、判決不備理由或理由矛盾者。
 
-* 470 提起上訴，應以上訴狀提出於原第二審法院為之。上訴狀內，應表明上訴理由，並添具關於上訴理由之必要證據。上訴狀內，宜記載因上訴所得受之利益。
+* 470 提起上訴，應以上訴狀提出於原第二審法院為之。上訴狀內，應記載上訴理由，表明下列各款事項：一、原判決所違背之法令及其具體內容。二、依訴訟資料合於該違背法令之具體事實。上訴狀內，宜記載因上訴所得受之利益。
 
-* 471 上訴狀內未表明上訴理由者，上訴人應於提起上訴後二十日內，提出理由書於原第二審法院；未提出者，毋庸命其補正，由原第二審法院以裁定駁回之。被上訴人得於上訴狀或前項理由書送達後十五日內，提出答辯狀於原第二審法院。第二審法院送交訴訟卷宗於第三審法院，應於收到答辯狀或前項期間已滿後為之。
+> 釋：一、第一、第三項不修正。二、上訴狀內應表明上訴理由，為求明確起見，以為第三審法院審理之依據，爰修正第二項。
 
-> 釋：一、當事人為拖延訴訟，恆濫行上訴，既不於上訴狀內表明上訴理由，亦不於提起上訴後十五日內提出理由書，坐等第三審以其上訴為不合程式，以裁定駁回，致訴訟不能迅速終結，於他造權益之保護，自嫌未周，爰刪除本條第一項末句「法院」二字，並於該句之下增列「由原第二審法院以裁定駁回之」，以杜其弊。（參考日本民事訴訟法第三百九十九條第一項第二款）。二、為使上訴人提起第三審上訴後，有餘裕撰擬上訴理由書以保護其正當權益，爰將現行條文「上訴人應於提起上訴後十五日內，提出理由書於原第二審法院」修正為「上訴人應於提起上訴後二十日內，提出理由書於原第二審法院」庶不致因時日過短，致遭駁回。三、第二項、第三項不修正。
+* 471 上訴狀內未表明上訴理由者，上訴人應於提起上訴後二十日內，提出理由書於原第二審法院；未提出者，毋庸命其補正，由原第二審法院以裁定駁回之。被上訴人得於上訴狀或前項理由書送達後十五日內，提出答辯狀於原第二審法院。第二審法院送交訴訟卷宗於第三審法院，應於收到答辯狀或前項期間已滿後為之。判決宣示後送達前提起上訴者，第一項之期間自判決送達後起算。
+
+> 釋：一、第一、二、三項不修正。二、判決送達前之上訴，既尚未收受第二審法院判決書，尚無從獲悉判決內容以表明上訴理由，爰增設第四項。
 
 * 472 被上訴人在第三審未判決前，得提出答辯狀及其追加書狀於第三審法院。上訴人亦得提出上訴理由追加書狀。第三審法院以認為有必要時為限，得將前項書狀送達於他造。
 
@@ -1262,13 +1438,25 @@
 
 * 571 婚姻事件，夫或妻為禁治產人者，應由其監護人代為訴訟行為；如監護人即係其配偶時，應由親屬會議所指定之人，代為訴訟行為。監護人提起訴訟者，應得親屬會議之允許。
 
-* 572 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，得合併提起，或於第一審或第二審言詞辯論終結前，為訴之變更、追加或提起反訴。非婚姻事件之訴，以交付子女、返還財物、給付家庭生活費用或扶養之請求，或由訴之原因、事實所生損害賠償之請求為限，得與前項之訴合併提起，或於其程序為訴之追加或提起反訴。
+* 572 婚姻無效、確認婚姻成立或不成立、撤銷婚姻、離婚或夫妻同居之訴，得合併提起，或於第一審或第二審言詞辯論終結前，為訴之變更、追加或提起反訴。依前項規定得為訴之變更、追加或提起反訴者，不得另行起訴，其另行起訴者，法院應以裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。受移送之法院不得以違背專屬管轄為理由，移送於他法院。非婚姻事件之訴，以夫妻財產之分配或分割、返還財物、給付家庭生活費用或贍養費或扶養之請求，或由訴之原因、事實所生損害賠償之請求為限，得與第一項之訴合併提起，或於第一審或第二審言詞辯論終結前，為訴之追加或提起反訴；其另行起訴者，法院得以裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。
+
+> 釋：一、為彌補婚姻事件中，另行起訴者此項缺失，並兼顧起訴原告之除斥期間利益，爰增設第二項。二、原條文第二項改列為第三項。有關給付膽養費之訴訟，與婚姻事件有密切之關係，亦宜與婚姻事件同時解決。爰於第三項所定得與婚姻事件合併提起之請求中，增列「給付贍養費」。
+
+* 572.1 撤銷婚姻或離婚之訴，當事人得於第一審或第二審言詞辯論終結前，附帶請求法院於認原告之訴為有理由時，並定對於未成年子女權利義務行使負擔之內容及方法。前項情形，法院亦得依職權定之。但於裁判前，應使當事人有陳述意見之機會。夫妻均不適合行使權利時，法院得選定適當之人為子女之監護人。但應先徵詢被選定人之意見。前三項情形，法院為裁判時，不受當事人聲明事項之拘束。前四項規定，於婚姻無效、確認婚姻成立或不成立或夫妻同居之訴準用之。
+
+> 釋：一、本條係新增。二、當事人提起撤銷婚姻或離婚訴訟之情形，如嚴格限制當事人須俟撤銷婚姻或離婚判決確定後再另案聲請法院裁定，非但增加當事人及法院之勞費，同時亦使當事人與法院無法於撤銷婚姻或離婚訴訟中，併就未成年子女權利義務行使或負擔之問題通盤考量，自嫌未洽。爰增訂之。
 
 * 573 提起婚姻無效、撤銷婚姻或離婚之訴，因無理由被駁回者，受該判決之原告，不得援以前依訴之合併、變更或追加所得主張之事實，提起獨立之訴。以反訴提起前項之訴，因無理由被駁回者，受該判決之被告，不得援以前得作反訴原因主張之事實，提起獨立之訴。
 
-* 574 關於認諾效力之規定，於婚姻事件不適用之。關於訴訟上自認及不爭執事實之效力之規定，在撤銷婚姻、離婚或夫妻同居之訴，於撤銷婚姻、離婚或拒絕同居之原因、事實不適用之；在婚姻無效或確認婚姻成立或不成立之訴，於婚姻無效或不成立及婚姻有效或成立之原因、事實不適用之。
+* 574 關於認諾效力之規定，於婚姻事件不適用之。關於捨棄效力之規定，於婚姻無效、婚姻成立或不成立之訴，不適用之。關於訴訟上自認及不爭執事實之效力之規定，在撤銷婚姻、離婚或夫妻同居之訴，於撤銷婚姻、離婚或拒絕同居之原因、事實，不適用之；在婚姻無效或確認婚姻成立或不成立之訴，於婚姻無效或不成立及婚姻有效或成立之原因、事實，不適用之。關於認諾、捨棄、訴訟上自認及不爭執事實之效力之規定，於第五百七十二條之一之事件，不適用之。婚姻事件，當事人得合意不公開審判，並向受訴法院陳明。
+
+> 釋：一、原條文第一項未修正，改列修正後第一項前段。第二項未修正。第三、四項新增。二、婚姻事件常涉及當事人隱私及家庭秘密，未必與公益有關，性質上不宜在公開法庭審理，應准許當事人合意不公開審判。
 
 * 575 法院因維持婚姻或確定婚姻是否無效或不成立，得斟酌當事人所未提出之事實。前項事實，於裁判前，應令當事人有辯論之機會。
+
+* 575.1 第五百七十二條之一之事件，法院得斟酌當事人所未提出之事實，並應依職權調查證據。前項事件，法院為裁判前，得徵詢主管機關或社會福利機構之意見，或囑託其進行訪視、提出調查報告及建議。
+
+> 釋：一、本條係新增。二、當事人提起撤銷婚姻、離婚等訴訟時，為使當事人及法院於該訴訟中，能併就未成年子女權利義務行使或負擔問題作通盤考量，始准由當事人於該訴訟中附帶請求，惟因其本質上仍屬非訟事件，為保障未成年子女之利益，仍應採職權探知之非訟法理。三、未成年子女之教養、保護政府應成立專責之主管機關或督導社會福利機構為之，作為衡量子女最佳利益之參考。爰於第二項予以明定，以資依據。
 
 * 576 當事人或法定代理人本人不從法院之命到場者，準用第三百零三條之規定。但不得拘提之。法院得使受命推事或受託推事訊問本人。
 
@@ -1276,7 +1464,9 @@
 
 * 578 離婚之訴及夫妻同居之訴，法院認當事人有和諧之望者，得以裁定命於六個月以下之期間內，停止訴訟程序。但以一次為限。
 
-* 579 法院得依聲請，命扶養或監護子女或為其他假處分。
+* 579 法院對於未成年子女權利義務之行使或負擔，得依聲請或依職權命為必要之假處分。法院命為前項假處分時，準用第五百七十五條之一之規定。
+
+> 釋：對於未成年子女權利義務行使，如有急迫情勢不立即定暫時狀態，將使子女安全或教養受到影響，故法院得依聲請或依職權命為必要之假處分，以保護未成年子女之權益。
 
 * 580 夫或妻於判決確定前死亡者，關於本案視為訴訟終結。但第三人提起撤銷婚姻之訴後，僅夫或妻死亡者，不在此限。
 
@@ -1285,6 +1475,10 @@
 * 582 就婚姻無效、撤銷婚姻或確認婚姻成立或不成立之訴所為之判決，對於第三人亦有效力。以重婚為理由，提起婚姻無效之訴被駁回者，其判決對於當事人之前配偶，以已參加訴訟為限，始有效力。
 
 > 釋：一、第一項不修正。二、修正前民法第九百九十二條對於結婚違反第九百八十五條重婚之規定者，僅規定得由利害關係人向法院請求撤銷之。修正後民法第九百八十八條規定結婚違反重婚之規定者無效，並將第九百九十二條刪除，是已不得以重婚為理由提起撤銷婚姻之訴，爰將之修正為「以重婚為理由提起婚姻無效之訴」，以期配合。
+
+* 582.1 依第五百七十二條第三項之規定，就夫妻財產之分配或分割或贍養費之請求，與該條第一項之訴合併提起，或為訴之追加或提起反訴者，當事人對於第一審或第二審之終局判決，僅就該條第一項之訴提起上訴者，對於原告就夫妻財產之分配或分割或贍養費之請求，於原審勝訴部分，視為一併提起上訴。第五百七十二條之一事件，當事人對於第一審或第二審之終局判決，僅就本案部分提起上訴者，視為附帶請求部分已提起上訴。當事人或利害關係人僅就附帶請求部分之裁判聲明不服者，適用關於抗告程序之規定。
+
+> 釋：一、本條係新增。二、第五百七十二條之一事件，第一、二審法院為判決後，如何聲明不服，應適用上訴或抗告程序，滋生疑義，有明文加以規定之必要。三、規定當事人僅就本案部分提起上訴者，視為附帶請求部分已提起上訴。四、因附帶請求部分係為保護子女利益而設，必須訊速妥適處理，故宜適用抗告程序為之，特於第二項明文加以規定，以杜爭議。
 
 * 583 收養無效或撤銷收養，與確認收養關係成立或不成立及終止收養關係之訴，專屬養父母之住所地或其死亡時住所地之法院管轄。
 
@@ -1318,9 +1512,9 @@
 
 * 595 第五百八十九條及第五百九十二條之訴，法院得斟酌當事人所未提出之事實。前項事實，於裁判前應令當事人有辯論之機會。
 
-* 596 第五百六十八條第一項但書、第二項及第三項、第五百七十一條、第五百七十二條第二項、第五百七十六條、第五百七十九條至第五百八十一條及第五百八十二條第一項之規定，於第五百八十九條及第五百九十二條之訴準用之。但認領子女之訴，由生母或其他法定代理人起訴，因無理由被駁回者，其判決對於非婚生子女，不準用第五百八十二條第一項之規定。第五百八十四條至第五百八十六條之規定，於第五百八十九條之訴，準用之。第五百七十二條第一項及第五百七十三條之規定，於認領無效或撤銷認領之訴，準用之。
+* 596 第五百六十八條第一項但書、第二項及第三項、第五百七十一條、第五百七十二條第三項、第五百七十二條之一、第五百七十四條第三項、第四項、第五百七十五條之一、第五百七十六條、第五百七十九條至第五百八十一條及第五百八十二條第一項之規定，於第五百八十九條及第五百九十二條之訴準用之。但認領子女之訴，由生母或其他法定代理人起訴，因無理由被駁回者，其判決對於非婚生子女，不準用第五百八十二條第一項之規定。第五百八十四條至第五百八十六條之規定，於第五百八十九條之訴準用之。第五百七十二條第一項及第五百七十三條之規定，於認領無效或撤銷認領之訴準用之。
 
-> 釋：依修正民法第一千零六十七條規定，非婚生子女或其生母或其他法定代理人均得獨立提起認領子女之訴，如係由生母或其他法定代理人起訴，不論勝訴或敗訴，依本條第一項準用第五百八十二條第一項之規定，其確定判決之效力，亦及於有權提起同一訴訟之非婚生子女，影響修正民法賦與非婚生子女請求認領訴訟權之行使，爰增訂本項但書，以資配合。
+> 釋：一、原第五百七十二條第二項已移列為第三項，又本法為配合民法親屬編有關父母對於未成年子女權利義務行使或負擔之規定，爰加以修正之。二、第二項、第三項不修正。
 
 * 597 禁治產之聲請，專屬應禁治產人住所地之法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。
 
